--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_ja.properties
@@ -1,7 +1,37 @@
-LBL_Java_Plug-in_ver=\u3010Java Plug-in {0}\u3011
-LBL_Unknown_Version=\u3010<Unknown Version>\u3011
-LBL_Unknown=\u3010<Unknown>\u3011
-LBL_Unknown_Application=\u3010<Unknown Application>\u3011
-OpenIDE-Module-Name=\u3010VisualVM-ApplicationType\u3011
-LBL_Java_Web_Start=\u3010Java Web Start\u3011
-LBL_Java_Plug-in=\u3010Java Plug-in\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+OpenIDE-Module-Name=VisualVM - \u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u7a2e\u985e
+
+LBL_Unknown_Application=<\u4e0d\u660e\u306a\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3>
+
+LBL_Unknown_Version=<\u4e0d\u660e\u306a\u30d0\u30fc\u30b8\u30e7\u30f3>
+
+LBL_Java_Plug-in_ver=Java \u30d7\u30e9\u30b0\u30a4\u30f3 {0}
+
+LBL_Java_Plug-in=Java \u30d7\u30e9\u30b0\u30a4\u30f3
+
+LBL_Java_Web_Start=Java Web Start
+
+LBL_Unknown=<\u4e0d\u660e>
