--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/Bundle_ja.properties
@@ -1,7 +1,31 @@
-# 2 : ^https://.*
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+
+OpenIDE-Module-Display-Category=\u30c4\u30fc\u30eb
+OpenIDE-Module-Name=VisualVM - \u30b3\u30a2
+OpenIDE-Module-Short-Description=VisualVM \u306e\u4e3b\u306a\u30e2\u30b8\u30e5\u30fc\u30eb
 com_sun_tools_visualvm_core_update_center=https://visualvm.dev.java.net/uc/updates.xml.gz?{$netbeans.hash.code}
-OpenIDE-Module-Display-Category=\u3010Tools\u3011
-OpenIDE-Module-Name=\u3010VisualVM-Core\u3011
-Menu/Applications=\u3010&Applications\u3011
-OpenIDE-Module-Short-Description=\u3010VisualVM main module\u3011
-Services/AutoupdateType/com_sun_tools_visualvm_core_update_center.instance=\u3010VisualVM Plugins Center\u3011
+Services/AutoupdateType/com_sun_tools_visualvm_core_update_center.instance=VisualVM \u30d7\u30e9\u30b0\u30a4\u30f3\u30bb\u30f3\u30bf\u30fc
+Menu/Applications=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3(&A)
