--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/options/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/options/Bundle_ja.properties
@@ -1,14 +1,38 @@
-LBL_Polling=\u3010Polling\u3011
-LBL_Monitored_Host=\u3010Monitored &Host:\u3011
-BTN_Reset=\u3010&Reset\u3011
-LBL_Charts_Cache=\u3010Charts Cache\u3011
-OptionsCategory_Title_Core=\u3010VisualVM\u3011
-OptionsCategory_Name_Core=\u3010General\u3011
-LBL_min=\u3010min.\u3011
-LBL_Monitored_Data2=\u3010Monitored D&ata:\u3011
-LBL_Threads=\u3010&Threads:\u3011
-MSG_Do_Not_Show_Again=\u3010Reset Do Not Show Again confirmations:\u3011
-LBL_Monitored_Data=\u3010Monitored &Data:\u3011
-LBL_Monitored_Host2=\u3010Monitored H&ost:\u3011
-LBL_Sec=\u3010sec.\u3011
-LBL_Profiler=\u3010Profiler\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+OptionsCategory_Name_Core=\u4e00\u822c
+OptionsCategory_Title_Core=VisualVM
+LBL_Monitored_Host=\u76e3\u8996\u5bfe\u8c61\u30db\u30b9\u30c8(&H):
+LBL_Sec=\u79d2
+LBL_Threads=\u30b9\u30ec\u30c3\u30c9(&T):
+LBL_Monitored_Data=\u76e3\u8996\u5bfe\u8c61\u30c7\u30fc\u30bf(&D):
+LBL_Polling=\u30dd\u30fc\u30ea\u30f3\u30b0
+LBL_Charts_Cache=\u30c1\u30e3\u30fc\u30c8\u30ad\u30e3\u30c3\u30b7\u30e5
+LBL_Monitored_Host2=\u76e3\u8996\u5bfe\u8c61\u30db\u30b9\u30c8(&O):
+LBL_min=\u5206
+LBL_Monitored_Data2=\u76e3\u8996\u5bfe\u8c61\u30c7\u30fc\u30bf(&A):
+LBL_Profiler=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9
+MSG_Do_Not_Show_Again=\u300c\u6b21\u56de\u304b\u3089\u8868\u793a\u3057\u306a\u3044\u300d\u78ba\u8a8d\u3092\u30ea\u30bb\u30c3\u30c8:
+BTN_Reset=\u30ea\u30bb\u30c3\u30c8(&R)
