--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/ui/components/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/ui/components/Bundle_ja.properties
@@ -1,6 +1,36 @@
-MSG_OS=\u3010OS\u3011
-MSG_host=\u3010host\u3011
-MSG_application=\u3010application\u3011
-ToolTip_Hide=\u3010Hide\u3011
-MSG_JVM=\u3010JVM\u3011
-MSG_Not_supported=\u3010Not supported for this {0}.\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+
+ToolTip_Hide=\u975e\u8868\u793a
+
+MSG_application=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3
+
+MSG_JVM=JVM
+
+MSG_host=\u30db\u30b9\u30c8
+
+MSG_OS=OS
+
+MSG_Not_supported=\u3053\u306e {0} \u3067\u306f\u30b5\u30dd\u30fc\u30c8\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
