--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-host-views/com-sun-tools-visualvm-host-views/com/sun/tools/visualvm/host/views/overview/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-host-views/com-sun-tools-visualvm-host-views/com/sun/tools/visualvm/host/views/overview/Bundle_ja.properties
@@ -1,19 +1,61 @@
-LBL_Hostname=\u3010Hostname\u3011
-LBL_CPU=\u3010CPU\u3011
-LBL_Overview=\u3010Overview\u3011
-LBL_CPU_load=\u3010CPU load\u3011
-LBL_Memory=\u3010Memory\u3011
-LBL_Architecture=\u3010Architecture\u3011
-LBL_Physical_memory=\u3010Physical memory\u3011
-LBL_Total_memory=\u3010Total memory\u3011
-LBL_Swap_memory=\u3010Swap memory\u3011
-LBL_Total_swap=\u3010Total swap\u3011
-LBL_Load_average=\u3010Load average\u3011
-LBL_Swap_size=\u3010Swap size\u3011
-LBL_MB=\u3010MB\u3011
-LBL_Processors=\u3010Processors\u3011
-LBL_Total_memory_size=\u3010Total physical memory size\u3011
-LBL_Host_IP=\u3010Host IP\u3011
-LBL_OS=\u3010OS\u3011
-LBL_Used_memory=\u3010Used memory\u3011
-LBL_Used_swap=\u3010Used swap\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+LBL_Load_average=\u5e73\u5747\u8ca0\u8377
+
+LBL_Used_memory=\u4f7f\u7528\u30e1\u30e2\u30ea\u30fc
+
+LBL_Used_swap=\u4f7f\u7528\u30b9\u30ef\u30c3\u30d7
+
+LBL_Overview=\u6982\u8981
+
+LBL_CPU=CPU
+
+LBL_Memory=\u30e1\u30e2\u30ea\u30fc
+
+LBL_Host_IP=\u30db\u30b9\u30c8 IP
+
+LBL_Hostname=\u30db\u30b9\u30c8\u540d
+
+LBL_OS=OS
+
+LBL_Architecture=\u30a2\u30fc\u30ad\u30c6\u30af\u30c1\u30e3\u30fc
+
+LBL_Processors=\u30d7\u30ed\u30bb\u30c3\u30b5
+
+LBL_Total_memory_size=\u5408\u8a08\u7269\u7406\u30e1\u30e2\u30ea\u30fc\u30b5\u30a4\u30ba
+
+LBL_Swap_size=\u30b9\u30ef\u30c3\u30d7\u30b5\u30a4\u30ba
+
+LBL_MB=MB
+
+LBL_CPU_load=CPU \u8ca0\u8377
+
+LBL_Physical_memory=\u7269\u7406\u30e1\u30e2\u30ea\u30fc
+
+LBL_Total_memory=\u5408\u8a08\u30e1\u30e2\u30ea\u30fc
+
+LBL_Total_swap=\u5408\u8a08\u30b9\u30ef\u30c3\u30d7
+
+LBL_Swap_memory=\u30b9\u30ef\u30c3\u30d7\u30e1\u30e2\u30ea\u30fc
