--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-host/com-sun-tools-visualvm-host/com/sun/tools/visualvm/host/impl/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-host/com-sun-tools-visualvm-host/com/sun/tools/visualvm/host/impl/Bundle_ja.properties
@@ -1,11 +1,45 @@
-ToolTip_Add_Remote_Host=\u3010Add Remote Host\u3011
-LBL_Host_name=\u3010&Host name:\u3011
-LBL_Searching_for_host=\u3010Searching for host\u3011
-LBL_Add_Remote_Host=\u3010Add Remote &Host...\u3011
-LBL_Display_name=\u3010&Display name:\u3011
-Title_Unresolved_Hosts=\u3010Could Not Resolve Hosts\u3011
-MSG_Already_Monitored=<html>\u3010Host {0} already monitored as {1}\u3011</html>
-MSG_Wrong_Host=<html>\u3010<b>Cannot resolve host {0}</b><br><br>Make sure you have entered correct<br>host name or address.\u3011</html>
-LBL_OK=\u3010OK\u3011
-Title_Add_Remote_Host=\u3010Add Remote Host\u3011
-MSG_Unresolved_Hosts=<html>\u3010<b>These hosts could not be resolved:</b><br>Do you want to resolve them on next VisualVM session?<br><br>\u3011</html>
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+LBL_Add_Remote_Host=\u30ea\u30e2\u30fc\u30c8\u30db\u30b9\u30c8\u3092\u8ffd\u52a0(&H)...
+
+ToolTip_Add_Remote_Host=\u30ea\u30e2\u30fc\u30c8\u30db\u30b9\u30c8\u3092\u8ffd\u52a0
+
+Title_Add_Remote_Host=\u30ea\u30e2\u30fc\u30c8\u30db\u30b9\u30c8\u306e\u8ffd\u52a0
+
+LBL_Host_name=\u30db\u30b9\u30c8\u540d(&H)\:
+
+LBL_Display_name=\u8868\u793a\u540d(&D)\:
+
+LBL_OK=\u4e86\u89e3
+
+LBL_Searching_for_host=\u30db\u30b9\u30c8\u3092\u691c\u7d22\u3057\u3066\u3044\u307e\u3059 
+
+MSG_Wrong_Host=<html><b>\u30db\u30b9\u30c8 {0} \u3092\u89e3\u6c7a\u3067\u304d\u307e\u305b\u3093</b><br><br>\u6b63\u3057\u3044\u30db\u30b9\u30c8\u540d\u3068\u30a2\u30c9\u30ec\u30b9\u304c<br>\u5165\u529b\u3055\u308c\u3066\u3044\u308b\u3053\u3068\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
+
+MSG_Already_Monitored=<html>\u30db\u30b9\u30c8 {0} \u306f\u3059\u3067\u306b {1} \u3068\u3057\u3066\u76e3\u8996\u3055\u308c\u3066\u3044\u307e\u3059</html>
+
+Title_Unresolved_Hosts=\u30db\u30b9\u30c8\u3092\u89e3\u6c7a\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+
+MSG_Unresolved_Hosts=<html><b>\u3053\u308c\u3089\u306e\u30db\u30b9\u30c8\u3092\u89e3\u6c7a\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f:</b><br>\u6b21\u306e VisualVM \u30bb\u30c3\u30b7\u30e7\u30f3\u3067\u3053\u308c\u3089\u3092\u89e3\u6c7a\u3057\u307e\u3059\u304b ?<br><br></html>
