--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/application/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/application/Bundle_ja.properties
@@ -1,18 +1,61 @@
-LBL_OK=\u3010OK\u3011
-MSG_already_exists=\u3010already exists as\u3011
-LBL_Display_name=\u3010&Display name:\u3011
-MSG_OPENJMX=\u3010open application specified by JMX connection (host:port)\u3011
-Title_Add_JMX_Connection=\u3010Add JMX Connection\u3011
-MSG_Cannot_resolve_host=\u3010Cannot resolve host: {0}\u3011
-MSG_Invalid_JMX_connection=\u3010Invalid JMX connection: {0}\u3011
-MSG_JMX_connection=\u3010JMX connection\u3011
-LBL_Connection=\u3010&Connection:\u3011
-LBL_Save_security_credentials=\u3010&Save security credentials\u3011
-LBL_Use_security_credentials=\u3010Us&e security credentials\u3011
-LBL_Supply_Security_Credentials=\u3010Supply Security Credentials:\u3011
-ToolTip_Add_JMX_Connection=\u3010Add JMX Connection\u3011
-LBL_Password=\u3010&Password:\u3011
-MSG_Cannot_connect_using=\u3010Cannot connect using\u3011
-LBL_Username=\u3010&Username:\u3011
-LBL_Usage=<html>\u3010<nobr><b>Usage</b>: &lt;hostname&gt;:&lt;port&gt; OR service:jmx:&lt;protocol&gt;:&lt;sap&gt;</nobr>\u3011</html>
-MSG_Add_JMX_Connection=\u3010Add &JMX Connection...\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+
+
+MSG_Add_JMX_Connection=JMX \u63a5\u7d9a\u3092\u8ffd\u52a0(&J)...
+
+ToolTip_Add_JMX_Connection=JMX \u63a5\u7d9a\u3092\u8ffd\u52a0
+
+Title_Add_JMX_Connection=JMX \u63a5\u7d9a\u306e\u8ffd\u52a0
+
+LBL_Supply_Security_Credentials=\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30fc\u8a3c\u660e\u66f8\u3092\u5165\u529b\: 
+
+LBL_Username=\u30e6\u30fc\u30b6\u30fc\u540d(&U)\:
+
+LBL_Password=\u30d1\u30b9\u30ef\u30fc\u30c9(&P)\:
+
+LBL_OK=\u4e86\u89e3
+
+MSG_Invalid_JMX_connection=\u7121\u52b9\u306a JMX \u63a5\u7d9a\: {0}
+
+MSG_Cannot_resolve_host=\u30db\u30b9\u30c8\u3092\u89e3\u6c7a\u3067\u304d\u307e\u305b\u3093\: {0}
+
+MSG_JMX_connection=JMX \u63a5\u7d9a 
+
+MSG_already_exists=\ \u3059\u3067\u306b\u5b58\u5728\u3057\u3066\u3044\u307e\u3059 
+
+MSG_Cannot_connect_using=\u63a5\u7d9a\u3067\u304d\u307e\u305b\u3093\u3002 
+
+LBL_Connection=\u63a5\u7d9a(&C)\:
+
+LBL_Usage=<html><nobr><b>\u4f7f\u7528\u6cd5</b>: &lt;\u30db\u30b9\u30c8\u540d&gt;:&lt;\u30dd\u30fc\u30c8&gt; \u307e\u305f\u306f \u30b5\u30fc\u30d3\u30b9:jmx:&lt;\u30d7\u30ed\u30c8\u30b3\u30eb&gt;:&lt;sap&gt;</nobr></html>
+
+LBL_Display_name=\u8868\u793a\u540d(&D)\:
+
+LBL_Use_security_credentials=\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30fc\u4fdd\u8a3c\u66f8\u3092\u4f7f\u7528(&E)
+
+LBL_Save_security_credentials=\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30fc\u8a3c\u660e\u66f8\u3092\u4fdd\u5b58(&S)
+
+MSG_OPENJMX=JMX \u63a5\u7d9a (\u30db\u30b9\u30c8 : \u30dd\u30fc\u30c8) \u3067\u6307\u5b9a\u3057\u305f\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u958b\u304f
