--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/welcome/resources/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/welcome/resources/Bundle_ja.properties
@@ -1,47 +1,76 @@
-ACN_ShowOnStartup=\u3010Show Welcome Screen on startup\u3011
-# 2 : ^0x[0-9A-Za-z]+$
-ButtonTextColor=0x164B7B
-LBL_Link8=\u3010Monitoring and Managing Java SE 6\u3011
-LBL_Link7=\u3010Getting Started Extending VisualVM\u3011
-LBL_Link6=\u3010Troubleshooting Java™ 2 SE 5.0\u3011
-LBL_Link5=\u3010VisualVM Troubleshooting Guide\u3011
-LBL_Link4=\u3010Troubleshooting Guide for Java SE 6\u3011
-# 2 : ^0x[0-9A-Za-z]+$
-VisitedLinkColor=0x5591D2
-LBL_Link3=\u3010Getting Started with VisualVM\u3011
-LBL_Link2=\u3010Java SE Reference at a Glance\u3011
-# 2 : ^0x[0-9A-Za-z]+$
-MouseOverLinkColor=0xe76f00
-LBL_Link1=\u3010VisualVM Home\u3011
-# 2 : ^0x[0-9A-Za-z]+$
-DefaultTextColor=0x000000
-# 2 : ^0x[0-9A-Za-z]+$
-ContentBackgroundColor=0xeff7fb
-LBL_ShowOnStartup=\u3010Show On Startup\u3011
-# 2 : ^http://.*
-URL_Link8=http://java.sun.com/developer/technicalArticles/J2SE/monitoring/
-# 2 : .*html$
-URL_Link7=https://visualvm.dev.java.net/api-quickstart.html
-# 2 : ^0x[0-9A-Za-z]+$
-BorderColor=0x5B83A9
-# 2 : .*html$
-URL_Link6=http://java.sun.com/javase/6/webnotes/trouble/other/troubleshooting-j2se5.html
-# 2 : .*html$
-URL_Link5=https://visualvm.dev.java.net/troubleshooting.html
-# 2 : .*html$
-URL_Link4=http://java.sun.com/javase/6/webnotes/trouble/TSG-VM/html/index.html
-# 2 : .*html$
-URL_Link3=https://visualvm.dev.java.net/gettingstarted.html
-# 2 : ^0x[0-9A-Za-z]+$
-LinkInFocusColor=0x000000
-# 2 : ^http://.*
-URL_Link2=http://java.sun.com/javase/reference/index.jsp
-# 2 : ^https://.*
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+#
+# Other
+#
+LBL_ShowOnStartup=\u8d77\u52d5\u6642\u306b\u8868\u793a
+ACN_ShowOnStartup=\u8d77\u52d5\u6642\u306b\u958b\u59cb\u753b\u9762\u3092\u8868\u793a
+ACD_ShowOnStartup=\u6b21\u56de\u306e NetBeans \u306e\u8d77\u52d5\u6642\u306b\u3001\u958b\u59cb\u753b\u9762\u3092\u8868\u793a\u307e\u305f\u306f\u975e\u8868\u793a\u306b\u3059\u308b\u30c1\u30a7\u30c3\u30af\u30dc\u30c3\u30af\u30b9
+
+
+LBL_Link1=VisualVM \u306e\u30db\u30fc\u30e0
 URL_Link1=https://visualvm.dev.java.net
-# 2 : ^0x[0-9A-Za-z]+$
+
+LBL_Link2=Java SE \u53c2\u7167\u306e\u4e00\u89a7
+URL_Link2=http://java.sun.com/javase/reference/index.jsp
+
+LBL_Link3=VisualVM \u5165\u9580
+URL_Link3=https://visualvm.dev.java.net/gettingstarted.html
+
+LBL_Link4=Java SE 6 \u306e\u30c8\u30e9\u30d6\u30eb\u30b7\u30e5\u30fc\u30c6\u30a3\u30f3\u30b0\u30ac\u30a4\u30c9
+URL_Link4=http://java.sun.com/javase/6/webnotes/trouble/TSG-VM/html/index.html
+
+LBL_Link5=VisualVM \u306e\u30c8\u30e9\u30d6\u30eb\u30b7\u30e5\u30fc\u30c6\u30a3\u30f3\u30b0\u30ac\u30a4\u30c9
+URL_Link5=https://visualvm.dev.java.net/troubleshooting.html
+
+LBL_Link6=Java\u2122 2 SE 5.0 \u306e\u30c8\u30e9\u30d6\u30eb\u30b7\u30e5\u30fc\u30c6\u30a3\u30f3\u30b0
+URL_Link6=http://java.sun.com/javase/6/webnotes/trouble/other/troubleshooting-j2se5.html
+
+LBL_Link7=VisualVM \u306e\u62e1\u5f35\u5165\u9580
+URL_Link7=https://visualvm.dev.java.net/api-quickstart.html
+
+LBL_Link8=Java SE 6 \u306e\u76e3\u8996\u304a\u3088\u3073\u7ba1\u7406
+URL_Link8=http://java.sun.com/developer/technicalArticles/J2SE/monitoring/
+
+
+URL_SunLogo=http://jp.sun.com
+#
+# Colors
+#
 ScreenBackgroundColor=0xa9c7de
-# 2 : ^http://.*
-URL_SunLogo=http://www.sun.com
-# 2 : ^0x[0-9A-Za-z]+$
+ContentBackgroundColor=0xeff7fb
+MouseOverLinkColor=0xe76f00
+BorderColor=0x5B83A9
+
+# links & buttons
+ButtonTextColor=0x164B7B
+# default text color in RSS panels
+DefaultTextColor=0x000000
+# mouse-over link color
+LinkInFocusColor=0x000000
+# links in RSS feed panels
 LinkColor=0x35556b
-ACD_ShowOnStartup=\u3010Checkbox to show or hide the Welcome Screen on next NetBeans startup\u3011
+# visited link color
+VisitedLinkColor=0x5591D2
