--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-startup/netbeans/core/com-sun-tools-visualvm-modules-startup/com/sun/tools/visualvm/modules/startup/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-startup/netbeans/core/com-sun-tools-visualvm-modules-startup/com/sun/tools/visualvm/modules/startup/Bundle_ja.properties
@@ -1,21 +1,54 @@
-MSG_LicenseDlgTitle=\u3010License Agreement\u3011
-ACSD_LicenseDlg=\u3010License Agreement\u3011
-ACSN_EditorPane=\u3010License Text\u3011
-ACSD_AcceptButton=\u3010Click to accept license and continue\u3011
-MSG_LicenseDlgLabelBottom=\u3010If you accept all terms of the agreement, click I Accept to start VisualVM. You must accept the agreement to start VisualVM.\u3011
-ACSD_RejectButton=\u3010Click to reject license and exit\u3011
-ACSD_LicensePanel=\u3010N/A\u3011
-VisualVMStartup_IncorrectVersionMsg=<html>\u3010<br><b>You are running VisualVM using an unsupported Java version: {0}.</b><br><br>Please use Java SE 6.0 or Java SE 7.0 to run VisualVM. For information<br>about requirements and setup visit https://visualvm.dev.java.net.<br><br><hr><i>Java: {1}<br>JVM: {2}<br>Location: {3}</i><br><br>\u3011</html>
-MSG_LicenseNoButton=\u3010E&xit\u3011
-OpenIDE-Module-Name=\u3010VisualVM-Startup\u3011
-ACSD_EditorPane=\u3010Please read the following license agreement carefully. If you accept all terms of the agreement, click I Accept to start VisualVM. You must accept the agreement to start VisualVM.\u3011
-MSG_LicenseYesButton=\u3010I &Accept\u3011
-ACSN_LicenseDlg=\u3010License Dialog\u3011
-VisualVMStartup_JreMsg=<html>\u3010<br><b>You are running VisualVM using Java Runtime Environment (JRE).</b><br><br>Please use Java Development Kit (JDK) to run VisualVM. For information<br>about requirements and setup visit https://visualvm.dev.java.net.<br><br><hr><i>Java: {0}<br>JVM: {1}<br>Location: {2}</i><br><br>\u3011</html>
-ACSN_AcceptButton=\u3010Accept Button\u3011
-OpenIDE-Module-Display-Category=\u3010Tools\u3011
-MSG_LicenseDlgLabelTop=\u3010Please read the following license agreement carefully.\u3011
-VisualVMStartup_ErrorStartupCaption=\u3010Error Starting VisualVM\u3011
-ACSN_RejectButton=\u3010Reject Button\u3011
-ACSN_LicensePanel=\u3010License Panel\u3011
-OpenIDE-Module-Short-Description=\u3010VisualVM startup Module\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+
+OpenIDE-Module-Display-Category=\u30c4\u30fc\u30eb
+OpenIDE-Module-Name=VisualVM - \u8d77\u52d5
+
+#Licence dialog
+MSG_LicenseDlgTitle=\u4f7f\u7528\u8a31\u8afe\u5951\u7d04\u66f8
+MSG_LicenseDlgLabelTop=\u4ee5\u4e0b\u306e\u4f7f\u7528\u8a31\u8afe\u5951\u7d04\u66f8\u3092\u3088\u304f\u304a\u8aad\u307f\u304f\u3060\u3055\u3044\u3002
+MSG_LicenseDlgLabelBottom=\u3059\u3079\u3066\u306e\u5951\u7d04\u6761\u4ef6\u306b\u540c\u610f\u3059\u308b\u5834\u5408\u306f\u3001\u300c\u540c\u610f\u3059\u308b\u300d\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066 VisualVM \u3092\u8d77\u52d5\u3057\u3066\u304f\u3060\u3055\u3044\u3002VisualVM \u3092\u8d77\u52d5\u3059\u308b\u306b\u306f\u3001\u5951\u7d04\u306b\u540c\u610f\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
+MSG_LicenseYesButton=\u540c\u610f\u3059\u308b(&A)
+MSG_LicenseNoButton=\u7d42\u4e86(&X)
+
+ACSN_LicensePanel=\u4f7f\u7528\u8a31\u8afe\u30d1\u30cd\u30eb
+ACSD_LicensePanel=N/A
+
+ACSN_LicenseDlg=\u4f7f\u7528\u8a31\u8afe\u30c0\u30a4\u30a2\u30ed\u30b0
+ACSD_LicenseDlg=\u4f7f\u7528\u8a31\u8afe\u5951\u7d04\u66f8
+
+ACSN_EditorPane=\u4f7f\u7528\u8a31\u8afe\u30c6\u30ad\u30b9\u30c8
+ACSD_EditorPane=\u4ee5\u4e0b\u306e\u4f7f\u7528\u8a31\u8afe\u5951\u7d04\u66f8\u3092\u6ce8\u610f\u6df1\u304f\u304a\u8aad\u307f\u304f\u3060\u3055\u3044\u3002 \u3059\u3079\u3066\u306e\u5951\u7d04\u6761\u4ef6\u306b\u540c\u610f\u3059\u308b\u5834\u5408\u306f\u3001\u300c\u540c\u610f\u3059\u308b\u300d\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066 VisualVM \u3092\u8d77\u52d5\u3057\u3066\u304f\u3060\u3055\u3044\u3002VisualVM \u3092\u8d77\u52d5\u3059\u308b\u306b\u306f\u3001\u5951\u7d04\u306b\u540c\u610f\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
+
+ACSN_AcceptButton=\u540c\u610f\u3059\u308b\u30dc\u30bf\u30f3
+ACSD_AcceptButton=\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068\u4f7f\u7528\u8a31\u8afe\u306b\u540c\u610f\u3057\u3066\u7d99\u7d9a
+
+ACSN_RejectButton=\u62d2\u5426\u30dc\u30bf\u30f3
+ACSD_RejectButton=\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068\u4f7f\u7528\u8a31\u8afe\u3092\u62d2\u5426\u3057\u3066\u7d42\u4e86 
+OpenIDE-Module-Short-Description=VisualVM \u8d77\u52d5\u30e2\u30b8\u30e5\u30fc\u30eb
+
+VisualVMStartup_ErrorStartupCaption=VisualVM \u306e\u8d77\u52d5\u30a8\u30e9\u30fc
+VisualVMStartup_IncorrectVersionMsg=<html><br><b>\u30b5\u30dd\u30fc\u30c8\u3055\u308c\u3066\u3044\u306a\u3044 Java \u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3092\u4f7f\u7528\u3057\u3066 VisualVM \u3092\u5b9f\u884c\u3057\u3066\u3044\u307e\u3059: {0}.</b><br><br>VisualVM \u3092\u5b9f\u884c\u3059\u308b\u306b\u306f\u3001Java SE 6.0 \u307e\u305f\u306f Java SE 7.0 \u3092\u4f7f\u7528\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u8981\u4ef6\u3068\u8a2d\u5b9a\u306e<br>\u8a73\u7d30\u306b\u3064\u3044\u3066\u306f\u3001https://visualvm.dev.java.net \u3092\u53c2\u7167\u3057\u3066\u304f\u3060\u3055\u3044\u3002<br><br><hr><i>Java: {1}<br>JVM: {2}<br>\u5834\u6240: {3}</i><br><br></html>
+VisualVMStartup_JreMsg=<html><br><b>JRE\u00b7(Java Runtime Environment) \u3092\u4f7f\u7528\u3057\u3066\u00b7VisualVM\u00b7\u3092\u5b9f\u884c\u3057\u3066\u3044\u307e\u3059\u3002</b><br><br>VisualVM \u3092\u5b9f\u884c\u3059\u308b\u306b\u306f\u3001JDK (Java Development Kit) \u3092\u4f7f\u7528\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u8981\u4ef6\u3068\u8a2d\u5b9a\u306e<br>\u8a73\u7d30\u306b\u3064\u3044\u3066\u306f\u3001https://visualvm.dev.java.net \u3092\u53c2\u7167\u3057\u3066\u304f\u3060\u3055\u3044\u3002<br><br><hr><i>Java: {0}<br>JVM: {1}<br>\u5834\u6240: {2}</i><br><br></html>
