zh_CN files integration
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1809 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-host/com-sun-tools-visualvm-host/com/sun/tools/visualvm/host/impl/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-host/com-sun-tools-visualvm-host/com/sun/tools/visualvm/host/impl/Bundle_zh_CN.properties
@@ -1,11 +1,45 @@
-ToolTip_Add_Remote_Host=\u3010Add Remote Host\u3011
-LBL_Host_name=\u3010&Host name:\u3011
-LBL_Searching_for_host=\u3010Searching for host\u3011
-LBL_Add_Remote_Host=\u3010Add Remote &Host...\u3011
-LBL_Display_name=\u3010&Display name:\u3011
-Title_Unresolved_Hosts=\u3010Could Not Resolve Hosts\u3011
-MSG_Already_Monitored=<html>\u3010Host {0} already monitored as {1}\u3011</html>
-MSG_Wrong_Host=<html>\u3010<b>Cannot resolve host {0}</b><br><br>Make sure you have entered correct<br>host name or address.\u3011</html>
-LBL_OK=\u3010OK\u3011
-Title_Add_Remote_Host=\u3010Add Remote Host\u3011
-MSG_Unresolved_Hosts=<html>\u3010<b>These hosts could not be resolved:</b><br>Do you want to resolve them on next VisualVM session?<br><br>\u3011</html>
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+LBL_Add_Remote_Host=\u6dfb\u52a0\u8fdc\u7a0b\u4e3b\u673a(&H)...
+
+ToolTip_Add_Remote_Host=\u6dfb\u52a0\u8fdc\u7a0b\u4e3b\u673a
+
+Title_Add_Remote_Host=\u6dfb\u52a0\u8fdc\u7a0b\u4e3b\u673a
+
+LBL_Host_name=\u4e3b\u673a\u540d(&H)\uff1a
+
+LBL_Display_name=\u663e\u793a\u540d\u79f0(&D)\uff1a
+
+LBL_OK=\u786e\u5b9a
+
+LBL_Searching_for_host=\u641c\u7d22\u4e3b\u673a 
+
+MSG_Wrong_Host=<html><b>\u65e0\u6cd5\u89e3\u6790\u4e3b\u673a {0}</b><br><br>\u8bf7\u786e\u4fdd\u60a8\u8f93\u5165\u4e86\u6b63\u786e\u7684<br>\u4e3b\u673a\u540d\u6216\u5730\u5740\u3002</html>
+
+MSG_Already_Monitored=<html>\u5df2\u5c06\u4e3b\u673a {0} \u4f5c\u4e3a {1} \u8fdb\u884c\u76d1\u89c6</html>
+
+Title_Unresolved_Hosts=\u65e0\u6cd5\u89e3\u6790\u4e3b\u673a
+
+MSG_Unresolved_Hosts=<html><b>\u65e0\u6cd5\u89e3\u6790\u4ee5\u4e0b\u4e3b\u673a\uff1a</b><br>\u662f\u5426\u8981\u5728\u4e0b\u4e00\u4e2a VisualVM \u4f1a\u8bdd\u65f6\u89e3\u6790\u8fd9\u4e9b\u4e3b\u673a\uff1f<br><br></html>
