--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvmstat/com-sun-tools-visualvm-jvmstat/com/sun/tools/visualvm/jvmstat/application/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvmstat/com-sun-tools-visualvm-jvmstat/com/sun/tools/visualvm/jvmstat/application/Bundle_zh_CN.properties
@@ -1,3 +1,30 @@
-MSG_Broken_Jsp_Link=\u3010<a href="https://visualvm.dev.java.net/troubleshooting.html#jpswin">https://visualvm.dev.java.net/troubleshooting.html#jpswin</a>\u3011
-MSG_Broken_Jps=<html>\u3010<b>Local Java applications cannot be detected.</b><br><br>Please see the Troubleshooting guide for VisualVM for more<br>information and steps to fix the problem.<br><br>{0}\u3011</html>
-MSG_Broken_Jsp_NoLink=\u3010<nobr>https://visualvm.dev.java.net/troubleshooting.html#jpswin</nobr>\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+
+MSG_Broken_Jps=<html><b>\u65e0\u6cd5\u68c0\u6d4b\u5230\u672c\u5730 Java \u5e94\u7528\u7a0b\u5e8f\u3002</b><br><br>\u8bf7\u53c2\u89c1 VisualVM \u7684\u6545\u969c\u6392\u9664\u6307\u5357\uff0c<br>\u4ee5\u4e86\u89e3\u5982\u4f55\u89e3\u51b3\u95ee\u9898\u7684\u8be6\u7ec6\u4fe1\u606f\u548c\u6b65\u9aa4\u3002<br><br>{0}</html>
+
+MSG_Broken_Jsp_Link=<a href="https://visualvm.dev.java.net/troubleshooting.html#jpswin">https://visualvm.dev.java.net/troubleshooting.html#jpswin</a>
+
+MSG_Broken_Jsp_NoLink=<nobr>https://visualvm.dev.java.net/troubleshooting.html#jpswin</nobr>
