--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application-views/com-sun-tools-visualvm-application-views/com/sun/tools/visualvm/application/views/overview/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application-views/com-sun-tools-visualvm-application-views/com/sun/tools/visualvm/application/views/overview/Bundle_zh_CN.properties
@@ -1,17 +1,58 @@
-LBL_none=\u3010<none>\u3011
-LBL_PID=\u3010PID\u3011
-LBL_JVM_arguments=\u3010JVM arguments\u3011
-LBL_System_properties=\u3010System properties\u3011
-LBL_Java_Home=\u3010Java Home\u3011
-LBL_unknown=\u3010<unknown>\u3011
-LBL_Main_class=\u3010Main class\u3011
-LBL_Arguments=\u3010Arguments\u3011
-LBL_enabled=\u3010enabled\u3011
-LBL_JVM_Flags=\u3010JVM Flags\u3011
-LBL_Host=\u3010Host\u3011
-LBL_disabled=\u3010disabled\u3011
-LBL_Details=\u3010Details\u3011
-LBL_Saved_data=\u3010Saved data\u3011
-LBL_JVM=\u3010JVM\u3011
-LBL_Overview=\u3010Overview\u3011
-LBL_Heap_dump_on_OOME=\u3010Heap dump on OOME\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+
+LBL_enabled=\u542f\u7528
+
+LBL_disabled=\u7981\u7528
+
+LBL_unknown=<\u672a\u77e5>
+
+LBL_none=<\u65e0>
+
+LBL_Overview=\u6982\u8ff0
+
+LBL_Saved_data=\u4fdd\u5b58\u7684\u6570\u636e
+
+LBL_Details=\u8be6\u7ec6\u4fe1\u606f
+
+LBL_PID=PID
+
+LBL_Host=\u4e3b\u673a
+
+LBL_Main_class=\u4e3b\u7c7b
+
+LBL_Arguments=\u53c2\u6570
+
+LBL_JVM=JVM
+
+LBL_Java_Home=Java Home \u76ee\u5f55
+
+LBL_JVM_Flags=JVM \u6807\u5fd7
+
+LBL_Heap_dump_on_OOME=\u51fa\u73b0 OOME \u65f6\u751f\u6210\u5806 dump
+
+LBL_JVM_arguments=JVM \u53c2\u6570
+
+LBL_System_properties=\u7cfb\u7edf\u5c5e\u6027
