--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_zh_CN.properties
@@ -1,7 +1,37 @@
-LBL_Java_Plug-in_ver=\u3010Java Plug-in {0}\u3011
-LBL_Unknown_Version=\u3010<Unknown Version>\u3011
-LBL_Unknown=\u3010<Unknown>\u3011
-LBL_Unknown_Application=\u3010<Unknown Application>\u3011
-OpenIDE-Module-Name=\u3010VisualVM-ApplicationType\u3011
-LBL_Java_Web_Start=\u3010Java Web Start\u3011
-LBL_Java_Plug-in=\u3010Java Plug-in\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+OpenIDE-Module-Name=VisualVM-ApplicationType
+
+LBL_Unknown_Application=<\u672a\u77e5\u7684\u5e94\u7528\u7a0b\u5e8f>
+
+LBL_Unknown_Version=<\u672a\u77e5\u7684\u7248\u672c>
+
+LBL_Java_Plug-in_ver=Java \u63d2\u4ef6 {0}
+
+LBL_Java_Plug-in=Java \u63d2\u4ef6
+
+LBL_Java_Web_Start=Java Web Start
+
+LBL_Unknown=<\u672a\u77e5>
