--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/snapshot/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/snapshot/Bundle_zh_CN.properties
@@ -1,2 +1,27 @@
-LBL_Saving=\u3010Saving {0}...\u3011
-LBL_Snapshots=\u3010Snapshots\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+LBL_Snapshots=\u5feb\u7167
+
+LBL_Saving=\u6b63\u5728\u4fdd\u5b58 {0}...
