--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/impl/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/impl/Bundle_zh_CN.properties
@@ -1,28 +1,80 @@
-LBL_Main_class=\u3010Main class\u3011
-LBL_none=\u3010none\u3011
-LBL_OK=\u3010OK\u3011
-LBL_Overview=\u3010Overview\u3011
-LBL_Display_name=\u3010Display &name:\u3011
-LBL_JVM=\u3010JVM\u3011
-LBL_JDK_home=\u3010&JDK home:\u3011
-MSG_Core_dump_already_added=<html>\u3010Core dump {0} already added as {1}\u3011</html>
-LBL_Browse=\u3010&Browse...\u3011
-LBL_Details=\u3010Details\u3011
-LBL_Inspecting_core_dump=\u3010Inspecting core dump\u3011
-LBL_Add_VM_Coredump=\u3010Add VM C&oredump...\u3011
-ToolTip_Add_VM_Coredump=\u3010Add VM Coredump\u3011
-LBL_Core_Dumps=\u3010Core Dumps\u3011
-LBL_Select_JDK_Home=\u3010Select JDK Home\u3011
-LBL_JVM_arguments=\u3010JVM arguments\u3011
-Title_Add_VM_Coredump=\u3010Add VM Coredump\u3011
-LBL_System_properties=\u3010System properties\u3011
-LBL_Java_Home=\u3010Java Home\u3011
-LBL_Saved_data=\u3010Saved data\u3011
-LBL_VM_Coredump_file=\u3010VM &Coredump file:\u3011
-LBL_Browse1=\u3010B&rowse...\u3011
-LBL_Arguments=\u3010Arguments\u3011
-MSG_Adding=\u3010Adding {0}...\u3011
-MSG_not_valid_core_dump=\u3010{0} is not a valid core dump!\u3011
-LBL_JVM_Flags=\u3010JVM Flags\u3011
-LBL_Select_VM_Coredump=\u3010Select VM Coredump\u3011
-LBL_Delete_source_file=\u3010&Delete source file\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+
+LBL_Add_VM_Coredump=\u6dfb\u52a0 VM \u6838\u5fc3 dump(&O)...
+
+ToolTip_Add_VM_Coredump=\u6dfb\u52a0 VM \u6838\u5fc3 dump
+
+LBL_Core_Dumps=\u6838\u5fc3 Dump
+
+Title_Add_VM_Coredump=\u6dfb\u52a0 VM \u6838\u5fc3 dump
+
+LBL_Select_JDK_Home=\u9009\u62e9 JDK Home \u76ee\u5f55
+
+LBL_Select_VM_Coredump=\u9009\u62e9 VM \u6838\u5fc3 dump
+
+LBL_VM_Coredump_file=VM \u6838\u5fc3 dump \u6587\u4ef6(&C)\uff1a
+
+LBL_Browse=\u6d4f\u89c8(&B)...
+
+LBL_Browse1=\u6d4f\u89c8(&R)...
+
+LBL_JDK_home=&JDK home \u76ee\u5f55\uff1a
+
+LBL_Display_name=\u663e\u793a\u540d\u79f0(&N)\uff1a
+
+LBL_Delete_source_file=\u5220\u9664\u6e90\u6587\u4ef6(&D)
+
+LBL_OK=\u786e\u5b9a
+
+LBL_Overview=\u6982\u8ff0
+
+LBL_Saved_data=\u4fdd\u5b58\u7684\u6570\u636e
+
+LBL_Details=\u8be6\u7ec6\u4fe1\u606f
+
+LBL_Main_class=\u4e3b\u7c7b
+
+LBL_Arguments=\u53c2\u6570
+
+LBL_none=\u65e0
+
+LBL_JVM=JVM
+
+LBL_Java_Home=Java Home \u76ee\u5f55
+
+LBL_JVM_Flags=JVM \u6807\u5fd7
+
+LBL_Inspecting_core_dump=\u68c0\u67e5\u6838\u5fc3 dump
+
+MSG_not_valid_core_dump={0} \u4e0d\u662f\u6709\u6548\u7684\u6838\u5fc3 dump\uff01
+
+MSG_Core_dump_already_added=<html>\u6838\u5fc3 dump {0} \u5df2\u6dfb\u52a0\u4e3a {1}</html>
+
+MSG_Adding=\u6b63\u5728\u6dfb\u52a0 {0}...
+
+LBL_JVM_arguments=JVM \u53c2\u6570
+
+LBL_System_properties=\u7cfb\u7edf\u5c5e\u6027
