--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-host-views/com-sun-tools-visualvm-host-views/com/sun/tools/visualvm/host/views/overview/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-host-views/com-sun-tools-visualvm-host-views/com/sun/tools/visualvm/host/views/overview/Bundle_zh_CN.properties
@@ -1,19 +1,61 @@
-LBL_Hostname=\u3010Hostname\u3011
-LBL_CPU=\u3010CPU\u3011
-LBL_Overview=\u3010Overview\u3011
-LBL_CPU_load=\u3010CPU load\u3011
-LBL_Memory=\u3010Memory\u3011
-LBL_Architecture=\u3010Architecture\u3011
-LBL_Physical_memory=\u3010Physical memory\u3011
-LBL_Total_memory=\u3010Total memory\u3011
-LBL_Swap_memory=\u3010Swap memory\u3011
-LBL_Total_swap=\u3010Total swap\u3011
-LBL_Load_average=\u3010Load average\u3011
-LBL_Swap_size=\u3010Swap size\u3011
-LBL_MB=\u3010MB\u3011
-LBL_Processors=\u3010Processors\u3011
-LBL_Total_memory_size=\u3010Total physical memory size\u3011
-LBL_Host_IP=\u3010Host IP\u3011
-LBL_OS=\u3010OS\u3011
-LBL_Used_memory=\u3010Used memory\u3011
-LBL_Used_swap=\u3010Used swap\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+LBL_Load_average=\u5e73\u5747\u8d1f\u8377
+
+LBL_Used_memory=\u5360\u7528\u7684\u5185\u5b58
+
+LBL_Used_swap=\u5360\u7528\u7684\u4ea4\u6362\u7a7a\u95f4
+
+LBL_Overview=\u6982\u8ff0
+
+LBL_CPU=CPU
+
+LBL_Memory=\u5185\u5b58
+
+LBL_Host_IP=\u4e3b\u673a IP
+
+LBL_Hostname=\u4e3b\u673a\u540d
+
+LBL_OS=\u64cd\u4f5c\u7cfb\u7edf
+
+LBL_Architecture=\u4f53\u7cfb\u7ed3\u6784
+
+LBL_Processors=\u5904\u7406\u5668
+
+LBL_Total_memory_size=\u7269\u7406\u5185\u5b58\u603b\u5927\u5c0f
+
+LBL_Swap_size=\u4ea4\u6362\u7a7a\u95f4\u5927\u5c0f
+
+LBL_MB=MB
+
+LBL_CPU_load=CPU \u8d1f\u8377
+
+LBL_Physical_memory=\u7269\u7406\u5185\u5b58
+
+LBL_Total_memory=\u603b\u5185\u5b58
+
+LBL_Total_swap=\u603b\u4ea4\u6362\u7a7a\u95f4
+
+LBL_Swap_memory=\u4ea4\u6362\u7a7a\u95f4\u5185\u5b58
