--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/Bundle_zh_CN.properties
@@ -1,11 +1,41 @@
-MSG_Html_License1=\u3010Visit <a href="https://visualvm.dev.java.net"><nobr>https://visualvm.dev.java.net</nobr></a> for more information. Built on <a href="http://platform.netbeans.org"><nobr>NetBeans Platform</nobr></a>.\u3011
-OpenIDE-Module-Short-Description=\u3010UI customizations for VisualVM\u3011
-LBL_About_VisualVM=\u3010About VisualVM\u3011
-OpenIDE-Module-Long-Description=\u3010Customizes NetBeans platform/application UI using the layer.xml to show only items applicable for VisualVM.\u3011
-LBL_Version_Build=\u3010Version: {0} (Build {1})\u3011
-OpenIDE-Module-Display-Category=\u3010Tools\u3011
-MSG_License=\u3010<b>VisualVM</b> has been licensed under the GNU General Public License (GPL) Version 2 with Classpath Exception.\u3011
-MSG_License1=\u3010Visit <nobr>https://visualvm.dev.java.net</nobr> for more information. Built on <nobr>NetBeans Platform</nobr>.\u3011
-CTL_AboutAction=\u3010&About\u3011
-OpenIDE-Module-Name=\u3010VisualVM-AppUI\u3011
-MSG_Html_License=\u3010<b>VisualVM</b> has been licensed under the GNU General Public License (GPL) Version 2 with Classpath Exception.\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+CTL_AboutAction=\u5173\u4e8e(&A)
+OpenIDE-Module-Display-Category=\u5de5\u5177
+OpenIDE-Module-Long-Description=\u4f7f\u7528 layer.xml \u5b9a\u5236 NetBeans \u5e73\u53f0/\u5e94\u7528\u7a0b\u5e8f UI\uff0c\u4ee5\u4fbf\u4ec5\u663e\u793a\u9002\u7528\u4e8e VisualVM \u7684\u9879\u76ee\u3002
+OpenIDE-Module-Name=VisualVM-AppUI
+OpenIDE-Module-Short-Description=\u4e3a VisualVM \u5b9a\u5236 UI
+
+LBL_About_VisualVM=\u5173\u4e8e VisualVM
+
+LBL_Version_Build=\u7248\u672c\uff1a{0} (Build {1})
+
+MSG_License=<b>VisualVM</b> \u5df2\u83b7\u5f97 GNU \u901a\u7528\u516c\u5171\u8bb8\u53ef\u8bc1 (General Public License, GPL) \u7b2c 2 \u7248\uff08\u5305\u542b\u7c7b\u8def\u5f84\u4f8b\u5916\u6761\u6b3e\uff09\u7684\u8bb8\u53ef\u3002 
+
+MSG_License1=\u6709\u5173\u8be6\u7ec6\u4fe1\u606f\uff0c\u8bf7\u8bbf\u95ee <nobr>https://visualvm.dev.java.net</nobr>\u3002\u5728 <nobr>NetBeans \u5e73\u53f0</nobr>\u4e0a\u6784\u5efa\u3002
+
+MSG_Html_License=<b>VisualVM</b> \u5df2\u83b7\u5f97 GNU \u901a\u7528\u516c\u5171\u8bb8\u53ef\u8bc1 (General Public License, GPL) \u7b2c 2 \u7248\uff08\u5305\u542b\u7c7b\u8def\u5f84\u4f8b\u5916\u6761\u6b3e\uff09\u7684\u8bb8\u53ef\u3002 
+
+MSG_Html_License1=\u6709\u5173\u8be6\u7ec6\u4fe1\u606f\uff0c\u8bf7\u8bbf\u95ee <a href="https://visualvm.dev.java.net"><nobr>https://visualvm.dev.java.net</nobr></a>\u3002\u5728 <a href="http://platform.netbeans.org"><nobr>NetBeans \u5e73\u53f0</nobr></a>\u4e0a\u6784\u5efa\u3002
