--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/about/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/about/Bundle_zh_CN.properties
@@ -1,24 +1,65 @@
-TITLE_Details=\u3010Details\u3011
-LBL_Logfile=\u3010&Logfile\u3011
-CAPTION_Copy_Clipbard=\u3010Copy To Clipboard\u3011
-LBL_About=\u3010About\u3011
-TextViewerComponent_SelectAllString=\u3010Select All\u3011
-MSG_Save_logfile_failed=\u3010Saving the logfile to the selected destination failed.\u3011
-LBL_Details=\u3010&Details\u3011
-MSG_Logfile_notready=\u3010Logfile is not ready yet.\nPlease close the logfile viewer and open it again after a while.\u3011
-TextViewerComponent_CutString=\u3010Cut\u3011
-MSG_Copy_Clipboard=<html>\u3010Details copied to the clipboard.\u3011</html>
-BTN_Save_file=\u3010&Save to File\u3011
-LBL_Close=\u3010&Close\u3011
-TextViewerComponent_PasteString=\u3010Paste\u3011
-CAPTION_Save_logfile_failed=\u3010Save Logfile Failed\u3011
-LBL_Error=\u3010Error\u3011
-DESCR_Logfile=\u3010Opens VisualVM logfile viewer\u3011
-BTN_Copy_Clipboard=\u3010C&opy to Clipboard\u3011
-MSG_Saving_logfile=\u3010Saving logfile to {0}\u3011
-LBL_Cannot_open_the_logfile=\u3010Cannot open the logfile {0}\u3011
-TextViewerComponent_CopyString=\u3010Copy\u3011
-TextViewerComponent_DeleteString=\u3010Delete\u3011
-LBL_Logfile_Viewer_=\u3010Logfile Viewer ({0})\u3011
-CAPTION_Save_logfile=\u3010Save Logfile As\u3011
-DESCR_Details=\u3010VisualVM runtime details\u3011
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+TextViewerComponent_CutString=\u526a\u5207
+TextViewerComponent_CopyString=\u590d\u5236
+TextViewerComponent_PasteString=\u7c98\u8d34
+TextViewerComponent_DeleteString=\u5220\u9664
+TextViewerComponent_SelectAllString=\u5168\u9009
+LBL_About=\u5173\u4e8e
+
+LBL_Details=\u8be6\u7ec6\u4fe1\u606f(&D)
+
+TITLE_Details=\u8be6\u7ec6\u4fe1\u606f
+
+DESCR_Details=VisualVM \u8fd0\u884c\u65f6\u73af\u5883\u8be6\u7ec6\u4fe1\u606f
+
+LBL_Logfile=\u65e5\u5fd7\u6587\u4ef6(&L)
+
+DESCR_Logfile=\u6253\u5f00 VisualVM \u65e5\u5fd7\u6587\u4ef6\u67e5\u770b\u5668
+
+LBL_Close=\u5173\u95ed(&C)
+
+LBL_Cannot_open_the_logfile=\u65e0\u6cd5\u6253\u5f00\u65e5\u5fd7\u6587\u4ef6 {0}
+
+LBL_Error=\u9519\u8bef
+
+LBL_Logfile_Viewer_=\u65e5\u5fd7\u6587\u4ef6\u67e5\u770b\u5668 ({0})
+
+BTN_Copy_Clipboard=\u590d\u5236\u5230\u526a\u8d34\u677f(&O)
+
+CAPTION_Copy_Clipbard=\u590d\u5236\u5230\u526a\u8d34\u677f
+
+MSG_Copy_Clipboard=<html>\u5c06\u8be6\u7ec6\u4fe1\u606f\u590d\u5236\u5230\u526a\u8d34\u677f\u3002</html>
+
+BTN_Save_file=\u4fdd\u5b58\u5230\u6587\u4ef6(&S)
+
+CAPTION_Save_logfile=\u5c06\u65e5\u5fd7\u6587\u4ef6\u53e6\u5b58\u4e3a
+
+MSG_Saving_logfile=\u5c06\u65e5\u5fd7\u6587\u4ef6\u4fdd\u5b58\u5230 {0}
+
+CAPTION_Save_logfile_failed=\u4fdd\u5b58\u65e5\u5fd7\u6587\u4ef6\u5931\u8d25
+
+MSG_Save_logfile_failed=\u5c06\u65e5\u5fd7\u6587\u4ef6\u4fdd\u5b58\u5230\u9009\u5b9a\u76ee\u6807\u7684\u64cd\u4f5c\u5931\u8d25\u3002
+
+MSG_Logfile_notready=\u65e5\u5fd7\u6587\u4ef6\u5c1a\u672a\u51c6\u5907\u5c31\u7eea\u3002\n\u8bf7\u5173\u95ed\u65e5\u5fd7\u6587\u4ef6\u67e5\u770b\u5668\uff0c\u7a0d\u540e\u518d\u91cd\u65b0\u5c06\u5176\u6253\u5f00\u3002
