--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_zh_CN.properties
@@ -1,65 +1,153 @@
-LBL_Root_Classes=\u3010Start profiling from classes:\u3011
-LBL_Profiling_results=\u3010Profiling results\u3011
-MSG_Profiler_Snapshots=\u3010Profiler Snapshots\u3011
-MSG_Opening_snapshot_failed.=\u3010Opening snapshot failed.\u3011
-MSG_Opening_Profiler_Snapshot=\u3010Opening Profiler Snapshot...\u3011
-LBL_Cpu_settings=\u3010CPU settings\u3011
-LBL_Record_Stacktraces=\u3010Record allocations stack traces\u3011
-MSG_Compare_Snapshots=\u3010&Compare\u3011
-LBL_Status=\u3010Status:\u3011
-LBL_Snapshots_Comparison=\u3010Snapshots Comparison\u3011
-MSG_Class_Sharing_Nolink=\u3010<nobr>https://visualvm.dev.java.net/troubleshooting.html#xshare</nobr>\u3011
-MSG_Not_Comparable=<html>\u3010<b>Selected snapshots are not comparable.</b><br><br>Check snapshots type and settings.\u3011</html>
-TOOLTIP_Instrumentation_Filter=<html>\u3010<code><b>org.mypackage.&nbsp;</b></code> defines only the package code<br><code><b>org.mypackage.*</b></code> defines the package and all subpackages<br><br><b>Empty text</b> defines all packages<html>\u3011
-LBL_Profile_Incl=\u3010Profile only classes:\u3011
-LBL_Profile_AllocationsGC=\u3010Profile object allocations and GC\u3011
-LBL_Memory_settings=\u3010Memory settings\u3011
-MSG_refreshing=\u3010refreshing...\u3011
-MSG_in_progress=\u3010</a> in progress</nobr>\u3011
-MSG_application_terminated=\u3010application terminated\u3011
-MSG_profiling_of=\u3010<nobr>profiling of <a href='#'>\u3011
-LBL_Profiler=\u3010Profiler\u3011
-MSG_Save_Profiler_Snapshot_As=\u3010Save Profiler Snapshot As\u3011
-TOOLTIP_Track_Every=\u3010Only every n-th object is tracked to reduce profiling overhead. Total number of allocated objects is not affected.\u3011
-MSG_Incorrect_CPU_settings=\u3010Incorrect CPU settings specified.\u3011
-MSG_profiling_stopped=\u3010profiling stopped\u3011
-DESCR_Profile=\u3010Profile\u3011
-LBL_Profile_Excl=\u3010Do not profile classes:\u3011
-LBL_Settings=\u3010Settings\u3011
-TOOLTIP_Allocations=\u3010Only object allocations are recorded\u3011
-TOOLTIP_Inclusive_Filter=\u3010Only code of these packages will be profiled\u3011
-MSG_profiling_running_classes_N=\u3010profiling running ({0} classes instrumented, tracking each {1}th object)\u3011
-OpenIDE-Module-Name=\u3010VisualVM-Profiler\u3011
-MSG_profiling_running_methods=\u3010profiling running ({0} methods instrumented)\u3011
-DESCR_Compare_Snapshots=\u3010Compare profiler snapshots\u3011
-MSG_Profiler_Snapshot=\u3010Pro&filer Snapshot\u3011
-LBL_Stop=\u3010Stop\u3011
-MSG_Profile=\u3010&Profile\u3011
-LBL_Memory=\u3010Memory\u3011
-LBL_Profile_Runnables=\u3010Profile new Runnables\u3011
-MSG_profiling_started=\u3010profiling started\u3011
-MSG_Class_Sharing_Link=\u3010<a href="https://visualvm.dev.java.net/troubleshooting.html#xshare">https://visualvm.dev.java.net/troubleshooting.html#xshare</a>\u3011
-LBL_Run_GC=\u3010Run GC when getting results\u3011
-MSG_profiling_inactive=\u3010profiling inactive\u3011
-TOOLTIP_Stack_Traces=\u3010Information about methods allocating the objects is collected\u3011
-TOOLTIP_Root_Classes=<html>\u3010Profiling will start when code of these classes is invoked:<br><br><code><b>org.mypackage.**</b></code> defines all classes in the package and all subpackages<br><code><b>org.mypackage.*&nbsp;</b></code> defines all classes in the package<br><code><b>org.mypackage.MyClass</b></code> defines only <code>MyClass</code><br><br><b>Empty text</b> defines all classes\u3011</html>
-MSG_Exclude_Java_Core_Classes=\u3010Exclude Java Core Classes\u3011
-TOOLTIP_Exclusive_Filter=\u3010All code except these packages will be profiled\u3011
-LBL_Restore_Defaults=\u3010Restore Defaults\u3011
-DESCR_Snapshots_Comparison=\u3010Profiler Snapshots Comparison: {0} compared to {1}\u3011
-MSG_profiling_running_classes_3=\u3010profiling running ({0} classes instrumented, tracking each 3rd object)\u3011
-MSG_profiling_running_classes_2=\u3010profiling running ({0} classes instrumented, tracking each 2nd object)\u3011
-MSG_profiling_running_classes_1=\u3010profiling running ({0} classes instrumented, tracking each object)\u3011
-LBL_Profile=\u3010Profile:\u3011
-MSG_profiling_paused=\u3010profiling paused\u3011
-TOOLTIP_Allocations_GC=\u3010Whole lifecycle of allocated objects is recorded\u3011
-MSG_Calibration=<html>\u3010<b>Calibration will be performed.</b><br><br>Profiler will perform initial JDK calibration. Please make sure that other applications<br>are not placing a noticeable load on your machine at this time and click the OK button.\u3011</html>
-MSG_Profiling_results=\u3010Profiling results\u3011
-TOOLTIP_New_Runnables=\u3010Classes invoked from new Threads or Runnables are automatically instrumented\u3011
-LBL_Cpu=\u3010CPU\u3011
-LBL_Profile_Allocations=\u3010Profile object allocations\u3011
-LBL_Track_Every2=\u3010object allocations\u3011
-LBL_Track_Every1=\u3010Track every\u3011
-MSG_calibration_progress=\u3010calibration in progress...\u3011
-MSG_Class_Sharing=\u3010<b>WARNING!</b> Class sharing is enabled for this JVM. This can cause problems when profiling the application and eventually may crash it. Please see the Troubleshooting guide for more information and steps to fix the problem: {0}.\u3011
-DESCR_Profiler_Snapshot=\u3010Profiler Snapshot\u3011
+#
+# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+#
+# This code is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 2 only, as
+# published by the Free Software Foundation.  Sun designates this
+# particular file as subject to the "Classpath" exception as provided
+# by Sun in the LICENSE file that accompanied this code.
+#
+# This code is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+# version 2 for more details (a copy is included in the LICENSE file that
+# accompanied this code).
+#
+# You should have received a copy of the GNU General Public License version
+# 2 along with this work; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
+# CA 95054 USA or visit www.sun.com if you need additional information or
+# have any questions.
+
+OpenIDE-Module-Name=VisualVM-Profiler
+
+LBL_Profiler=Profiler
+
+LBL_Profiling_results=\u6027\u80fd\u5206\u6790\u7ed3\u679c
+
+MSG_application_terminated=\u5e94\u7528\u7a0b\u5e8f\u5df2\u7ec8\u6b62
+
+MSG_profiling_inactive=\u6027\u80fd\u5206\u6790\u5904\u4e8e\u4e0d\u6d3b\u52a8\u72b6\u6001
+
+MSG_profiling_started=\u6027\u80fd\u5206\u6790\u5df2\u542f\u52a8
+
+MSG_profiling_paused=\u6027\u80fd\u5206\u6790\u5df2\u6682\u505c
+
+MSG_refreshing=\u6b63\u5728\u5237\u65b0...
+
+MSG_calibration_progress=\u6b63\u5728\u6821\u51c6...
+
+MSG_profiling_running_methods=\u6b63\u5728\u8fd0\u884c\u6027\u80fd\u5206\u6790\uff08\u5df2\u5206\u6790 {0} \u4e2a\u65b9\u6cd5\uff09
+
+MSG_profiling_running_classes_1=\u6b63\u5728\u8fd0\u884c\u6027\u80fd\u5206\u6790\uff08\u5df2\u5206\u6790 {0} \u4e2a\u7c7b\uff0c\u6b63\u5728\u8ddf\u8e2a\u6bcf\u4e2a\u5bf9\u8c61\uff09
+
+MSG_profiling_running_classes_2=\u6b63\u5728\u8fd0\u884c\u6027\u80fd\u5206\u6790\uff08\u5df2\u5206\u6790 {0} \u4e2a\u7c7b\uff0c\u6b63\u5728\u6309\u6bcf 2 \u4e2a\u5bf9\u8c61\u7684\u95f4\u9694\u8fdb\u884c\u8ddf\u8e2a\uff09
+
+MSG_profiling_running_classes_3=\u6b63\u5728\u8fd0\u884c\u6027\u80fd\u5206\u6790\uff08\u5df2\u5206\u6790 {0} \u4e2a\u7c7b\uff0c\u6b63\u5728\u6309\u6bcf 3 \u4e2a\u5bf9\u8c61\u7684\u95f4\u9694\u8fdb\u884c\u8ddf\u8e2a\uff09
+
+MSG_profiling_running_classes_N=\u6b63\u5728\u8fd0\u884c\u6027\u80fd\u5206\u6790\uff08\u5df2\u5206\u6790 {0} \u4e2a\u7c7b\uff0c\u6b63\u5728\u6309\u6bcf {1} \u4e2a\u5bf9\u8c61\u7684\u95f4\u9694\u8fdb\u884c\u8ddf\u8e2a\uff09
+
+MSG_profiling_of=<nobr>\u6b63\u5728\u5bf9 <a href='#'>
+
+MSG_in_progress=</a> \u8fdb\u884c\u6027\u80fd\u5206\u6790</nobr>
+
+MSG_profiling_stopped=\u6027\u80fd\u5206\u6790\u5df2\u505c\u6b62
+
+MSG_Exclude_Java_Core_Classes=\u6392\u9664 Java \u6838\u5fc3\u7c7b
+
+MSG_Class_Sharing=<b>\u8b66\u544a\uff01</b>\u5df2\u4e3a\u6b64 JVM \u542f\u7528\u7c7b\u5171\u4eab\u3002\u8fd9\u4f1a\u5bfc\u81f4\u5728\u5bf9\u5e94\u7528\u7a0b\u5e8f\u8fdb\u884c\u6027\u80fd\u5206\u6790\u65f6\u51fa\u73b0\u95ee\u9898\uff0c\u751a\u81f3\u6700\u7ec8\u5bfc\u81f4\u5e94\u7528\u7a0b\u5e8f\u5d29\u6e83\u3002\u8bf7\u53c2\u89c1\u6545\u969c\u6392\u9664\u6307\u5357\uff0c\u4ee5\u4e86\u89e3\u5982\u4f55\u89e3\u51b3\u95ee\u9898\u7684\u8be6\u7ec6\u4fe1\u606f\u548c\u6b65\u9aa4\uff1a{0}\u3002
+
+MSG_Class_Sharing_Link=<a href="https://visualvm.dev.java.net/troubleshooting.html#xshare">https://visualvm.dev.java.net/troubleshooting.html#xshare</a>
+
+MSG_Class_Sharing_Nolink=<nobr>https://visualvm.dev.java.net/troubleshooting.html#xshare</nobr>
+
+LBL_Profile=\u6027\u80fd\u5206\u6790\uff1a
+
+LBL_Cpu=CPU
+
+LBL_Memory=\u5185\u5b58
+
+LBL_Stop=\u505c\u6b62
+
+LBL_Status=\u72b6\u6001\uff1a
+
+MSG_Profiling_results=\u6027\u80fd\u5206\u6790\u7ed3\u679c
+
+MSG_Compare_Snapshots=\u6bd4\u8f83(&C)
+
+DESCR_Compare_Snapshots=\u6bd4\u8f83 Profiler \u5feb\u7167
+
+MSG_Not_Comparable=<html><b>\u9009\u5b9a\u7684\u5feb\u7167\u4e0d\u53ef\u6bd4\u8f83\u3002</b><br><br>\u8bf7\u68c0\u67e5\u5feb\u7167\u7c7b\u578b\u548c\u8bbe\u7f6e\u3002</html>
+
+MSG_Profile=\u6027\u80fd\u5206\u6790(&P)
+
+DESCR_Profile=\u6027\u80fd\u5206\u6790
+
+MSG_Save_Profiler_Snapshot_As=\u5c06 Profiler \u5feb\u7167\u53e6\u5b58\u4e3a
+
+MSG_Profiler_Snapshot=Pro&filer \u5feb\u7167
+
+DESCR_Profiler_Snapshot=Profiler \u5feb\u7167
+
+LBL_Snapshots_Comparison=\u5feb\u7167\u6bd4\u8f83
+
+DESCR_Snapshots_Comparison=Profiler \u5feb\u7167\u6bd4\u8f83\uff1a{0} \u4e0e {1} \u76f8\u6bd4\u8f83
+
+MSG_Profiler_Snapshots=Profiler \u5feb\u7167
+
+MSG_Opening_Profiler_Snapshot=\u6b63\u5728\u6253\u5f00 Profiler \u5feb\u7167...
+
+MSG_Opening_snapshot_failed.=\u6253\u5f00\u5feb\u7167\u5931\u8d25\u3002
+
+MSG_Calibration=<html><b>\u5c06\u6267\u884c\u6821\u51c6\u3002</b><br><br>Profiler \u5c06\u6267\u884c\u521d\u59cb JDK \u6821\u51c6\u3002\u8bf7\u786e\u4fdd\u6b64\u65f6\u60a8\u7684\u8ba1\u7b97\u673a\u4e0a\u6ca1\u6709\u5176\u4ed6\u5e94\u7528\u7a0b\u5e8f<br>\u9020\u6210\u663e\u8457\u8d1f\u8f7d\uff0c\u7136\u540e\u5355\u51fb\u201c\u786e\u5b9a\u201d\u6309\u94ae\u3002</html>
+
+LBL_Settings=\u8bbe\u7f6e
+
+LBL_Cpu_settings=CPU \u8bbe\u7f6e
+
+LBL_Memory_settings=\u5185\u5b58\u8bbe\u7f6e
+
+LBL_Profile_Allocations=\u5206\u6790\u5bf9\u8c61\u5206\u914d
+
+LBL_Profile_AllocationsGC=\u5206\u6790\u5bf9\u8c61\u5206\u914d\u548c\u5783\u573e\u56de\u6536
+
+LBL_Record_Stacktraces=\u8bb0\u5f55\u5206\u914d\u6808\u8ddf\u8e2a
+
+LBL_Run_GC=\u83b7\u53d6\u7ed3\u679c\u65f6\u8fd0\u884c\u5783\u573e\u56de\u6536
+
+LBL_Restore_Defaults=\u6062\u590d\u7f3a\u7701\u8bbe\u7f6e
+
+LBL_Root_Classes=\u4ece\u4ee5\u4e0b\u7c7b\u542f\u52a8\u6027\u80fd\u5206\u6790
+
+LBL_Profile_Runnables=\u5206\u6790\u65b0\u7684\u53ef\u8fd0\u884c\u5bf9\u8c61
+
+LBL_Profile_Incl=\u4ec5\u5206\u6790\u4ee5\u4e0b\u7c7b\uff1a
+
+LBL_Profile_Excl=\u4e0d\u5206\u6790\u4ee5\u4e0b\u7c7b\uff1a
+
+MSG_Incorrect_CPU_settings=\u6307\u5b9a\u7684 CPU \u8bbe\u7f6e\u4e0d\u6b63\u786e\u3002
+
+TOOLTIP_Root_Classes=<html>\u5f53\u8c03\u7528\u4ee5\u4e0b\u7c7b\u7684\u4ee3\u7801\u65f6\u5c06\u542f\u52a8\u6027\u80fd\u5206\u6790\uff1a<br><br><code><b>org.mypackage.**</b></code> \u5b9a\u4e49\u5305\u53ca\u5168\u90e8\u5b50\u5305\u4e2d\u7684\u6240\u6709\u7c7b<br><code><b>org.mypackage.*&nbsp;</b></code> \u5b9a\u4e49\u5305\u4e2d\u7684\u6240\u6709\u7c7b<br><code><b>org.mypackage.MyClass</b></code> \u4ec5\u5b9a\u4e49 <code>MyClass</code><br><br><b>\u7a7a\u6587\u672c</b> \u5b9a\u4e49\u6240\u6709\u7c7b</html>
+
+TOOLTIP_New_Runnables=\u81ea\u52a8\u5206\u6790\u4ece\u65b0\u7ebf\u7a0b\u6216\u53ef\u8fd0\u884c\u5bf9\u8c61\u4e2d\u8c03\u7528\u7684\u7c7b
+
+TOOLTIP_Inclusive_Filter=\u4ec5\u5206\u6790\u8fd9\u4e9b\u5305\u7684\u4ee3\u7801 
+
+TOOLTIP_Exclusive_Filter=\u5206\u6790\u9664\u8fd9\u4e9b\u5305\u4ee5\u5916\u7684\u6240\u6709\u4ee3\u7801
+
+TOOLTIP_Instrumentation_Filter=<html><code><b>org.mypackage.&nbsp;</b></code> \u4ec5\u5b9a\u4e49\u5305\u4ee3\u7801<br><code><b>org.mypackage.*</b></code> \u5b9a\u4e49\u5305\u53ca\u6240\u6709\u5b50\u5305<br><br><b>\u7a7a\u6587\u672c</b> \u5b9a\u4e49\u6240\u6709\u5305<html>
+
+TOOLTIP_Allocations=\u4ec5\u8bb0\u5f55\u5bf9\u8c61\u5206\u914d
+
+TOOLTIP_Allocations_GC=\u8bb0\u5f55\u5df2\u5206\u914d\u5bf9\u8c61\u7684\u6574\u4e2a\u751f\u547d\u5468\u671f
+
+LBL_Track_Every1=\u8ddf\u8e2a\u95f4\u9694
+
+LBL_Track_Every2=\u5bf9\u8c61\u5206\u914d
+
+TOOLTIP_Track_Every=\u4ec5\u6309\u6bcf n \u4e2a\u5bf9\u8c61\u7684\u95f4\u9694\u8fdb\u884c\u8ddf\u8e2a\uff0c\u4ee5\u51cf\u5c11\u6027\u80fd\u5206\u6790\u5f00\u9500\u3002\u4f46\u5206\u914d\u7684\u5bf9\u8c61\u603b\u6570\u4e0d\u53d7\u5f71\u54cd\u3002
+
+TOOLTIP_Stack_Traces=\u6536\u96c6\u5206\u914d\u5bf9\u8c61\u6240\u7528\u65b9\u6cd5\u7684\u76f8\u5173\u4fe1\u606f
