--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-charts/com-sun-tools-visualvm-charts/com/sun/tools/visualvm/charts/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-charts/com-sun-tools-visualvm-charts/com/sun/tools/visualvm/charts/Bundle_ja.properties
@@ -22,5 +22,6 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
 OpenIDE-Module-Name=VisualVM - \u30c1\u30e3\u30fc\u30c8
 
