--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/Bundle_ja.properties
@@ -23,7 +23,7 @@
 # have any questions.
 
 
-OpenIDE-Module-Display-Category=\u30c4\u30fc\u30eb
+OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
 OpenIDE-Module-Name=VisualVM - \u30b3\u30a2
 OpenIDE-Module-Short-Description=VisualVM \u306e\u4e3b\u306a\u30e2\u30b8\u30e5\u30fc\u30eb
 com_sun_tools_visualvm_core_update_center=https://visualvm.dev.java.net/uc/updates.xml.gz?{$netbeans.hash.code}
