--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/snapshot/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/snapshot/Bundle_ja.properties
@@ -33,3 +33,7 @@ LBL_Directory=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\:
 LBL_NoFile=<\u30d5\u30a1\u30a4\u30eb\u306a\u3057>
 LBL_UnavailableFile=<\u306a\u3057>
 
+ACT_SortSnapshots=\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u306e\u4e26\u3079\u66ff\u3048\u9806\u5e8f(&S)
+ACT_TimeAdded=\u8ffd\u52a0\u3055\u308c\u305f\u6642\u9593(&T)
+ACT_DisplayName=\u8868\u793a\u540d(&D)
+
