--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-jvm/com-sun-tools-visualvm-jvm/com/sun/tools/visualvm/jvm/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-jvm/com-sun-tools-visualvm-jvm/com/sun/tools/visualvm/jvm/Bundle_ja.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
 OpenIDE-Module-Name=VisualVM - JVM
 
 MSG_ThreadDumpfailed=\u30b9\u30ec\u30c3\u30c9\u30c0\u30f3\u30d7\u306e\u53d6\u5f97\u306b\u5931\u6557\u3057\u307e\u3057\u305f
