--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-jvmstat/com-sun-tools-visualvm-jvmstat/com/sun/tools/visualvm/jvmstat/application/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-jvmstat/com-sun-tools-visualvm-jvmstat/com/sun/tools/visualvm/jvmstat/application/Bundle_ja.properties
@@ -31,6 +31,8 @@ MSG_Broken_Jps2=<html><b>\u30ed\u30fc\u30ab\u30eb Java \u30a2\u30d7\u30ea\u30b1\
 MSG_Broken_Jps2_Link=<a href="https://visualvm.dev.java.net/troubleshooting.html#jpswin2">https://visualvm.dev.java.net/troubleshooting.html#jpswin2</a>
 MSG_Broken_Jps2_NoLink=<nobr>https://visualvm.dev.java.net/troubleshooting.html#jpswin2</nobr>
 
+MSG_Broken_Jvmstat=<html><b>{0} \u3078\u306e jvmstat \u63a5\u7d9a\u306e\u4f5c\u6210\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002</b><br><br>\u8a73\u7d30\u306f VisualVM \u306e\u30ed\u30b0\u30d5\u30a1\u30a4\u30eb\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
+
 BTN_AddDefault=\u30c7\u30d5\u30a9\u30eb\u30c8\u3092\u8ffd\u52a0(&D)
 BTN_AddCustom=\u30ab\u30b9\u30bf\u30e0\u3092\u8ffd\u52a0(&C)
 BTN_Remove=\u524a\u9664(&R)
