--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/options/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/options/Bundle_ja.properties
@@ -41,4 +41,5 @@ NetworkOptionsPanel_NoProxyHint=(\u4f8b: \u30ed\u30fc\u30ab\u30eb\u30db\u30b9\u3
 NetworkOptionsPanel_AuthCheckbox=\u30d7\u30ed\u30ad\u30b7\u306b\u8a8d\u8a3c\u304c\u5fc5\u8981(&Q)\:
 NetworkOptionsPanel_Username=\u30e6\u30fc\u30b6\u30fc\u540d(&E)\:
 NetworkOptionsPanel_Password=\u30d1\u30b9\u30ef\u30fc\u30c9(&W)\:
+NetworkOptionsPanel_Password_Description=\u30d7\u30ed\u30ad\u30b7\u30d1\u30b9\u30ef\u30fc\u30c9
 
