--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiling/com-sun-tools-visualvm-profiling/com/sun/tools/visualvm/profiling/snapshot/diff/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiling/com-sun-tools-visualvm-profiling/com/sun/tools/visualvm/profiling/snapshot/diff/Bundle_ja.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# Copyright 2007-2010 Sun Microsystems, Inc.  All Rights Reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -22,5 +22,13 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
-ProxySettingsHack_WarningMsg=<html><b>\u4ee3\u7406\u8bbe\u7f6e\u4e0d\u53ef\u7528\u3002</b><br><br>\u8981\u4e3a VisualVM \u8bbe\u7f6e\u4ee3\u7406\u8bbe\u7f6e\uff0c\u8bf7\u4f7f\u7528\u4ee5\u4e0b\u7f51\u9875\u4e2d\u63cf\u8ff0\u7684\u6807\u51c6 Java \u5c5e\u6027\uff1a<br>http://java.sun.com/javase/6/docs/technotes/guides/net/properties.html\u3002<br><br>\u793a\u4f8b\uff1a<br><code>visualvm -J-Dhttp.proxyHost=proxy.server.com -J-Dhttp.proxyPort=8080</code></html>
-ProxySettingsHack_WarningLinkMsg=<html><b>\u4ee3\u7406\u8bbe\u7f6e\u4e0d\u53ef\u7528\u3002</b><br><br>\u8981\u4e3a VisualVM \u8bbe\u7f6e\u4ee3\u7406\u8bbe\u7f6e\uff0c\u8bf7\u4f7f\u7528\u4ee5\u4e0b\u7f51\u9875\u4e2d\u63cf\u8ff0\u7684\u6807\u51c6 Java \u5c5e\u6027\uff1a<br><a href="http://java.sun.com/javase/6/docs/technotes/guides/net/properties.html">http://java.sun.com/javase/6/docs/technotes/guides/net/properties.html</a>\u3002<br><br>\u793a\u4f8b\uff1a<br><code>visualvm -J-Dhttp.proxyHost=proxy.server.com -J-Dhttp.proxyPort=8080</code></html>
+MSG_Compare_Snapshots=\u6bd4\u8f03(&C)
+
+DESCR_Compare_Snapshots=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3092\u6bd4\u8f03\u3057\u307e\u3059
+
+MSG_Not_Comparable=<html><b>\u9078\u629e\u3057\u305f\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u306f\u6bd4\u8f03\u3067\u304d\u307e\u305b\u3093\u3002</b><br><br>\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u306e\u7a2e\u985e\u3068\u8a2d\u5b9a\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
+
+LBL_Snapshots_Comparison=\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u6bd4\u8f03
+
+DESCR_Snapshots_Comparison=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u6bd4\u8f03\: {0} \u3068 {1} \u3092\u6bd4\u8f03
+
