--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/options/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/options/Bundle_zh_CN.properties
@@ -21,7 +21,8 @@
 # Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
-MSG_NO_APP_PID=\u65e0\u6cd5\u6253\u5f00 pid \u4e3a {0} \u7684\u5e94\u7528\u7a0b\u5e8f
+MSG_NO_APP_PID=\u65e0\u6cd5\u6253\u5f00 pid \u4e3a {0} \u7684\u5e94\u7528\u7a0b\u5e8f\u3002
+MSG_NO_APP_ID=\u65e0\u6cd5\u6253\u5f00\u8bf7\u6c42\u7684\u5e94\u7528\u7a0b\u5e8f\u3002
 MSG_OPENPID=\u6253\u5f00\u8fdb\u7a0b id \u4e3a <arg> \u7684\u5e94\u7528\u7a0b\u5e8f
 MSG_OPENID=\u6253\u5f00 id \u4e3a <arg> \u7684\u5e94\u7528\u7a0b\u5e8f
 
