--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_zh_CN.properties
@@ -67,4 +67,6 @@ DESCR_Apt=apt\uff1a\u6807\u6ce8\u5904\u7406\u5de5\u5177\u3002\u7528\u4e8e\u57fa\
 DESCR_AppletViewer=appletviewer\uff1aJava applet \u67e5\u770b\u5668\u3002\u7528\u4e8e\u5728\u4e07\u7ef4\u7f51\u6d4f\u89c8\u5668\u4ee5\u5916\u8fd0\u884c applet\u3002
 DESCR_JavaDb=Java DB \u662f\u7531 Sun \u5206\u53d1\u7684\u53d7\u652f\u6301\u7684 Apache Derby \u5f00\u6e90\u6570\u636e\u5e93\u3002Java DB \u91c7\u7528\u4e86\u767e\u5206\u4e4b\u767e Java \u6280\u672f\uff0c\u975e\u5e38\u6613\u4e8e\u4f7f\u7528\u3002
 DESCR_JdkDemoApp=JFC \u6f14\u793a\u5e94\u7528\u7a0b\u5e8f\u3002
+DESCR_JRMC=Oracle JRockit Mission Control \u662f\u4e00\u7ec4\u5728 Oracle JRockit JVM \u4e0a\u8fd0\u884c\u7684\u5f3a\u5927\u5de5\u5177\u3002\u8fd9\u4e9b\u5de5\u5177\u53ef\u63d0\u4f9b\u9ad8\u7ea7\u4e14\u8c28\u5bc6\u7684 JVM \u76d1\u89c6\u548c\u7ba1\u7406\uff0c\u9002\u5408\u7528\u4e8e\u5f00\u53d1\u548c\u751f\u4ea7\u73af\u5883\u3002
+DESCR_WLS=Oracle WebLogic Server\u3002\u7528\u4e8e\u751f\u6210\u548c\u90e8\u7f72\u4f01\u4e1a Java EE \u5e94\u7528\u7a0b\u5e8f\u7684\u5e94\u7528\u670d\u52a1\u5668\u3002
 
