--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/Bundle_zh_CN.properties
@@ -23,7 +23,7 @@
 # have any questions.
 
 
-OpenIDE-Module-Display-Category=\u5de5\u5177
+OpenIDE-Module-Display-Category=\u57fa\u7840\u7ed3\u6784
 OpenIDE-Module-Name=VisualVM-Core
 OpenIDE-Module-Short-Description=VisualVM \u4e3b\u6a21\u5757
 com_sun_tools_visualvm_core_update_center=https://visualvm.dev.java.net/uc/updates.xml.gz?{$netbeans.hash.code}
