--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/options/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/options/Bundle_zh_CN.properties
@@ -33,9 +33,7 @@ LBL_Charts_Cache=\u56fe\u8868\u9ad8\u901f\u7f13\u5b58
 LBL_Monitored_Host2=\u76d1\u89c6\u7684\u4e3b\u673a(&O)\uff1a
 LBL_min=\u5206\u949f
 LBL_Monitored_Data2=\u76d1\u89c6\u7684\u6570\u636e(&A)\uff1a
-LBL_Profiler=Profiler
+LBL_Miscellaneous=\u5176\u4ed6
 MSG_Do_Not_Show_Again=\u91cd\u7f6e\u5bf9\u201c\u4e0d\u518d\u663e\u793a\u201d\u7684\u786e\u8ba4\u72b6\u6001\uff1a
 BTN_Reset=\u91cd\u7f6e(&R)
-BTN_Reset2=\u91cd\u7f6e(&E)
-LBL_ResetData=\u91cd\u7f6e\u6821\u51c6\u6570\u636e\uff1a
 
