--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/snapshot/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-core/com-sun-tools-visualvm-core/com/sun/tools/visualvm/core/snapshot/Bundle_zh_CN.properties
@@ -33,3 +33,7 @@ LBL_Directory=\u76ee\u5f55\uff1a
 LBL_NoFile=<\u65e0\u6587\u4ef6>
 LBL_UnavailableFile=<\u4e0d\u53ef\u7528>
 
+ACT_SortSnapshots=\u5feb\u7167\u7684\u6392\u5e8f\u65b9\u5f0f(&S)
+ACT_TimeAdded=\u6dfb\u52a0\u7684\u65f6\u95f4(&T)
+ACT_DisplayName=\u663e\u793a\u540d\u79f0(&D)
+
