--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/impl/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/impl/Bundle_zh_CN.properties
@@ -59,7 +59,7 @@ LBL_Main_class=\u4e3b\u7c7b
 
 LBL_Arguments=\u53c2\u6570
 
-LBL_none=\u65e0
+LBL_none=&lt;\u65e0&gt;
 
 LBL_JVM=JVM
 
@@ -78,4 +78,8 @@ MSG_Adding=\u6b63\u5728\u6dfb\u52a0 {0}...
 LBL_JVM_arguments=JVM \u53c2\u6570
 
 LBL_System_properties=\u7cfb\u7edf\u5c5e\u6027
+
+Title_Unresolved_CoreDumps=\u65e0\u6cd5\u88c5\u5165\u6838\u5fc3 Dump
+
+MSG_Unresolved_CoreDumps=<html><b>\u627e\u4e0d\u5230\u4ee5\u4e0b\u6838\u5fc3 Dump\uff1a</b><br>\u662f\u5426\u8981\u5728\u4e0b\u4e00\u4e2a VisualVM \u4f1a\u8bdd\u4e2d\u88c5\u5165\u5b83\u4eec\uff1f<br><br></html>
 
