--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-host/com-sun-tools-visualvm-host/com/sun/tools/visualvm/host/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-host/com-sun-tools-visualvm-host/com/sun/tools/visualvm/host/Bundle_zh_CN.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u57fa\u7840\u7ed3\u6784
 OpenIDE-Module-Name=VisualVM-Host
 
 LBL_Local=\u672c\u5730
@@ -39,4 +40,8 @@ ToolTip_Add_Remote_Host=\u6dfb\u52a0\u8fdc\u7a0b\u4e3b\u673a
 DESCR_Local=\u672c\u5730\u7cfb\u7edf\u3002
 DESCR_Remote=\u8fdc\u7a0b\u4e3b\u673a\u3002
 DESCR_Unknown=\u5728\u672a\u77e5\u4e3b\u673a\u4e0a\u8fd0\u884c\u7684\u5e94\u7528\u7a0b\u5e8f\u7684\u5bb9\u5668\u3002
+
+ACT_SortHosts=\u4e3b\u673a\u7684\u6392\u5e8f\u65b9\u5f0f(&H)
+ACT_TimeAdded=\u6dfb\u52a0\u7684\u65f6\u95f4(&T)
+ACT_DisplayName=\u663e\u793a\u540d\u79f0(&D)
 
