--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvmstat/com-sun-tools-visualvm-jvmstat/com/sun/tools/visualvm/jvmstat/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvmstat/com-sun-tools-visualvm-jvmstat/com/sun/tools/visualvm/jvmstat/Bundle_zh_CN.properties
@@ -22,5 +22,6 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u57fa\u7840\u7ed3\u6784
 OpenIDE-Module-Name=VisualVM-Jvmstat
 
