--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvmstat/com-sun-tools-visualvm-jvmstat/com/sun/tools/visualvm/jvmstat/application/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvmstat/com-sun-tools-visualvm-jvmstat/com/sun/tools/visualvm/jvmstat/application/Bundle_zh_CN.properties
@@ -31,6 +31,8 @@ MSG_Broken_Jps2=<html><b>\u65e0\u6cd5\u76d1\u89c6\u672c\u5730 Java \u5e94\u7528\
 MSG_Broken_Jps2_Link=<a href="https://visualvm.dev.java.net/troubleshooting.html#jpswin2">https://visualvm.dev.java.net/troubleshooting.html#jpswin2</a>
 MSG_Broken_Jps2_NoLink=<nobr>https://visualvm.dev.java.net/troubleshooting.html#jpswin2</nobr>
 
+MSG_Broken_Jvmstat=<html><b>\u65e0\u6cd5\u521b\u5efa\u4e0e {0} \u7684 jvmstat \u8fde\u63a5\u3002</b><br><br>\u8bf7\u68c0\u67e5 VisualVM \u65e5\u5fd7\u6587\u4ef6\u4ee5\u83b7\u53d6\u8be6\u7ec6\u4fe1\u606f\u3002</html>
+
 BTN_AddDefault=\u6dfb\u52a0\u7f3a\u7701(&D)
 BTN_AddCustom=\u6dfb\u52a0\u5b9a\u5236(&C)
 BTN_Remove=\u5220\u9664(&R)
