--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/Bundle_zh_CN.properties
@@ -23,7 +23,7 @@
 # have any questions.
 
 CTL_AboutAction=\u5173\u4e8e(&A)
-OpenIDE-Module-Display-Category=\u5de5\u5177
+OpenIDE-Module-Display-Category=\u57fa\u7840\u7ed3\u6784
 OpenIDE-Module-Long-Description=\u4f7f\u7528 layer.xml \u5b9a\u5236 NetBeans \u5e73\u53f0/\u5e94\u7528\u7a0b\u5e8f UI\uff0c\u4ee5\u4fbf\u4ec5\u663e\u793a\u9002\u7528\u4e8e VisualVM \u7684\u9879\u76ee\u3002
 OpenIDE-Module-Name=VisualVM-AppUI
 OpenIDE-Module-Short-Description=\u4e3a VisualVM \u5b9a\u5236 UI
