--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/options/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/options/Bundle_zh_CN.properties
@@ -41,4 +41,5 @@ NetworkOptionsPanel_NoProxyHint=\uff08\u4f8b\u5982\uff1alocalhost\u3001*.dev.jav
 NetworkOptionsPanel_AuthCheckbox=\u4ee3\u7406\u8981\u6c42\u9a8c\u8bc1(&Q)\uff1a
 NetworkOptionsPanel_Username=\u7528\u6237\u540d(&E)\uff1a
 NetworkOptionsPanel_Password=\u53e3\u4ee4(&W)\uff1a
+NetworkOptionsPanel_Password_Description=\u4ee3\u7406\u53e3\u4ee4
 
