--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-startup/netbeans/core/com-sun-tools-visualvm-modules-startup/com/sun/tools/visualvm/modules/startup/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-modules-startup/netbeans/core/com-sun-tools-visualvm-modules-startup/com/sun/tools/visualvm/modules/startup/Bundle_zh_CN.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# Copyright 2007-2010 Sun Microsystems, Inc.  All Rights Reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -23,11 +23,11 @@
 # have any questions.
 
 
-OpenIDE-Module-Display-Category=\u5de5\u5177
+OpenIDE-Module-Display-Category=\u57fa\u7840\u7ed3\u6784
 OpenIDE-Module-Name=VisualVM-Startup
 
 #Licence dialog
-MSG_LicenseDlgTitle=\u8bb8\u53ef\u8bc1\u534f\u8bae
+MSG_LicenseDlgTitle=VisualVM \u8bb8\u53ef\u8bc1\u534f\u8bae
 MSG_LicenseDlgLabelTop=\u8bf7\u4ed4\u7ec6\u9605\u8bfb\u4e0b\u9762\u7684\u8bb8\u53ef\u8bc1\u534f\u8bae\u3002
 MSG_LicenseDlgLabelBottom=\u5982\u679c\u60a8\u63a5\u53d7\u534f\u8bae\u7684\u5168\u90e8\u6761\u6b3e\uff0c\u8bf7\u5355\u51fb\u201c\u6211\u63a5\u53d7\u201d\u4ee5\u542f\u52a8 VisualVM\u3002\u8981\u542f\u52a8 VisualVM\uff0c\u60a8\u5fc5\u987b\u63a5\u53d7\u8be5\u534f\u8bae\u3002
 MSG_LicenseYesButton=\u6211\u63a5\u53d7(&A)
