--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-application-views/com-sun-tools-visualvm-application-views/com/sun/tools/visualvm/application/views/resources/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-application-views/com-sun-tools-visualvm-application-views/com/sun/tools/visualvm/application/views/resources/Bundle_ja.properties
@@ -22,5 +22,6 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
 OpenIDE-Module-Name=VisualVM - \u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30d3\u30e5\u30fc
 
