--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/Bundle_ja.properties
@@ -27,3 +27,8 @@ LBL_ConnectionProperties=\u63a5\u7d9a
 DESCR_ConnectionProperties=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u691c\u51fa\u304a\u3088\u3073\u7ba1\u7406\u306b\u4f7f\u7528\u3059\u308b\u63a5\u7d9a
 MSG_ConnectionProperties=\u30db\u30b9\u30c8 VisualVM \u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u306f\u76f4\u63a5 VM \u63a5\u7d9a\u306b\u3088\u3063\u3066\u7ba1\u7406\u3055\u308c\u307e\u3059\u3002
 
+ACT_SortApps=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u4e26\u3079\u66ff\u3048\u9806\u5e8f(&A)
+ACT_TimeAdded=\u8ffd\u52a0\u3055\u308c\u305f\u6642\u9593(&T)
+ACT_DisplayName=\u8868\u793a\u540d(&D)
+ACT_Pid=\u30d7\u30ed\u30bb\u30b9 ID(&P)
+
