--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/options/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/options/Bundle_ja.properties
@@ -21,7 +21,8 @@
 # Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
-MSG_NO_APP_PID=pid {0} \u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u958b\u3051\u307e\u305b\u3093
+MSG_NO_APP_PID=pid {0} \u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u958b\u3051\u307e\u305b\u3093\u3002
+MSG_NO_APP_ID=\u8981\u6c42\u3055\u308c\u305f\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u958b\u3051\u307e\u305b\u3093\u3002
 MSG_OPENPID=\u30d7\u30ed\u30bb\u30b9 ID <arg> \u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u958b\u304f
 MSG_OPENID=ID <arg> \u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u958b\u304f
 
