--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/Bundle_ja.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
 OpenIDE-Module-Name=VisualVM - \u30b3\u30a2\u30c0\u30f3\u30d7
 
 LBL_Save_Core_Dump_As=\u30b3\u30a2\u30c0\u30f3\u30d7\u3092\u5225\u540d\u4fdd\u5b58
@@ -29,4 +30,8 @@ LBL_Save_Core_Dump_As=\u30b3\u30a2\u30c0\u30f3\u30d7\u3092\u5225\u540d\u4fdd\u5b
 LBL_VM_Coredumps=VM \u306e\u30b3\u30a2\u30c0\u30f3\u30d7
 
 DESCR_CoreDump=\u30b3\u30a2\u30c0\u30f3\u30d7\u3002
+
+ACT_SortCoreDumps=\u30b3\u30a2\u30c0\u30f3\u30d7\u306e\u4e26\u3079\u66ff\u3048\u9806\u5e8f(&C)
+ACT_TimeAdded=\u8ffd\u52a0\u3055\u308c\u305f\u6642\u9593(&T)
+ACT_DisplayName=\u8868\u793a\u540d(&D)
 
