--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/impl/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/impl/Bundle_ja.properties
@@ -59,7 +59,7 @@ LBL_Main_class=\u4e3b\u30af\u30e9\u30b9
 
 LBL_Arguments=\u5f15\u6570
 
-LBL_none=\u306a\u3057
+LBL_none=&lt;\u306a\u3057&gt;
 
 LBL_JVM=JVM
 
@@ -78,4 +78,8 @@ MSG_Adding=\u8ffd\u52a0\u4e2d {0} ...
 LBL_JVM_arguments=JVM \u5f15\u6570
 
 LBL_System_properties=\u30b7\u30b9\u30c6\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3\u30fc
+
+Title_Unresolved_CoreDumps=\u30b3\u30a2\u30c0\u30f3\u30d7\u3092\u8aad\u307f\u8fbc\u3081\u307e\u305b\u3093\u3067\u3057\u305f
+
+MSG_Unresolved_CoreDumps=<html><b>\u3053\u308c\u3089\u306e\u30b3\u30a2\u30c0\u30f3\u30d7\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f:</b><br>\u6b21\u306e VisualVM \u30bb\u30c3\u30b7\u30e7\u30f3\u3067\u3053\u308c\u3089\u3092\u8aad\u307f\u8fbc\u307f\u307e\u3059\u304b ?<br><br></html>
 
