--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-heapdump/com-sun-tools-visualvm-heapdump/com/sun/tools/visualvm/heapdump/impl/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-heapdump/com-sun-tools-visualvm-heapdump/com/sun/tools/visualvm/heapdump/impl/Bundle_ja.properties
@@ -43,3 +43,13 @@ LBL_Creating_Heap_Dump=\u30d2\u30fc\u30d7\u30c0\u30f3\u30d7\u3092\u4f5c\u6210\u4
 
 LBL_Loading_Heap_Dump=\u30d2\u30fc\u30d7\u30c0\u30f3\u30d7\u3092\u8aad\u307f\u8fbc\u307f\u4e2d...
 
+CAPTION_Remote_heap_dump=\u30ea\u30e2\u30fc\u30c8\u30d2\u30fc\u30d7\u30c0\u30f3\u30d7
+
+MSG_Remote_heap_dump=\u30d2\u30fc\u30d7\u30c0\u30f3\u30d7\u30d5\u30a1\u30a4\u30eb\u3092\u30ea\u30e2\u30fc\u30c8\u30b7\u30b9\u30c6\u30e0\u306b\u4f5c\u6210(&H)\:
+
+MSG_Dump_failed=\u3053\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30ea\u30e2\u30fc\u30c8\u30d2\u30fc\u30d7\u30c0\u30f3\u30d7\u306e\u53d6\u5f97\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
+
+MSG_Dump_save_failed=\u30ea\u30e2\u30fc\u30c8\u30d2\u30fc\u30d7\u30c0\u30f3\u30d7\u306e\u4f5c\u6210\u304a\u3088\u3073\u4fdd\u5b58\u306b\u5931\u6557\u3057\u307e\u3057\u305f\:\n{0}
+
+MSG_Dump_ok=\u30d2\u30fc\u30d7\u30c0\u30f3\u30d7\u306f\u30ea\u30e2\u30fc\u30c8\u30b7\u30b9\u30c6\u30e0\u4e0a\u306b\u4f5c\u6210\u304a\u3088\u3073\u4fdd\u5b58\u3055\u308c\u307e\u3057\u305f:\n{0}\n\n\u30d5\u30a1\u30a4\u30eb\u3092\u30ed\u30fc\u30ab\u30eb\u30b7\u30b9\u30c6\u30e0\u306b\u79fb\u52d5\u3057\u3001\u300c\u30d5\u30a1\u30a4\u30eb\u300d|\u300c\u8aad\u307f\u8fbc\u307f...\u300d\u64cd\u4f5c\u3092\u4f7f\u7528\u3057\u3066\u30d2\u30fc\u30d7\u30c0\u30f3\u30d7\u3092\u958b\u3044\u3066\u304f\u3060\u3055\u3044\u3002
+
