--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-host/com-sun-tools-visualvm-host/com/sun/tools/visualvm/host/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-host/com-sun-tools-visualvm-host/com/sun/tools/visualvm/host/Bundle_ja.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
 OpenIDE-Module-Name=VisualVM - \u30db\u30b9\u30c8
 
 LBL_Local=\u30ed\u30fc\u30ab\u30eb
@@ -39,4 +40,8 @@ ToolTip_Add_Remote_Host=\u30ea\u30e2\u30fc\u30c8\u30db\u30b9\u30c8\u3092\u8ffd\u
 DESCR_Local=\u30ed\u30fc\u30ab\u30eb\u30b7\u30b9\u30c6\u30e0\u3002
 DESCR_Remote=\u30ea\u30e2\u30fc\u30c8\u30db\u30b9\u30c8\u3002
 DESCR_Unknown=\u4e0d\u660e\u306a\u30db\u30b9\u30c8\u4e0a\u3067\u5b9f\u884c\u4e2d\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30b3\u30f3\u30c6\u30ca\u3002
+
+ACT_SortHosts=\u30db\u30b9\u30c8\u306e\u4e26\u3079\u66ff\u3048\u9806\u5e8f(&H)
+ACT_TimeAdded=\u8ffd\u52a0\u3055\u308c\u305f\u6642\u9593(&T)
+ACT_DisplayName=\u8868\u793a\u540d(&D)
 
