--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/Bundle_ja.properties
@@ -23,7 +23,7 @@
 # have any questions.
 
 CTL_AboutAction=\u88fd\u54c1\u306b\u3064\u3044\u3066(&A)
-OpenIDE-Module-Display-Category=\u30c4\u30fc\u30eb
+OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
 OpenIDE-Module-Long-Description=VisualVM \u306b\u9069\u7528\u53ef\u80fd\u306a\u9805\u76ee\u3060\u3051\u3092\u8868\u793a\u3059\u308b\u3088\u3046\u306b\u3001layer.xml \u3092\u4f7f\u7528\u3057\u3066 NetBeans \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u304a\u3088\u3073\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e UI \u3092\u30ab\u30b9\u30bf\u30de\u30a4\u30ba\u3057\u307e\u3059\u3002
 OpenIDE-Module-Name=VisualVM - \u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e UI
 OpenIDE-Module-Short-Description=VisualVM \u7528\u306b UI \u3092\u30ab\u30b9\u30bf\u30de\u30a4\u30ba
