--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-startup/netbeans/core/com-sun-tools-visualvm-modules-startup/com/sun/tools/visualvm/modules/startup/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-startup/netbeans/core/com-sun-tools-visualvm-modules-startup/com/sun/tools/visualvm/modules/startup/Bundle_ja.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# Copyright 2007-2010 Sun Microsystems, Inc.  All Rights Reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -23,11 +23,11 @@
 # have any questions.
 
 
-OpenIDE-Module-Display-Category=\u30c4\u30fc\u30eb
+OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
 OpenIDE-Module-Name=VisualVM - \u8d77\u52d5
 
 #Licence dialog
-MSG_LicenseDlgTitle=\u4f7f\u7528\u8a31\u8afe\u5951\u7d04\u66f8
+MSG_LicenseDlgTitle=VisualVM \u4f7f\u7528\u8a31\u8afe\u5951\u7d04\u66f8
 MSG_LicenseDlgLabelTop=\u4ee5\u4e0b\u306e\u4f7f\u7528\u8a31\u8afe\u5951\u7d04\u66f8\u3092\u3088\u304f\u304a\u8aad\u307f\u304f\u3060\u3055\u3044\u3002
 MSG_LicenseDlgLabelBottom=\u3059\u3079\u3066\u306e\u5951\u7d04\u6761\u4ef6\u306b\u540c\u610f\u3059\u308b\u5834\u5408\u306f\u3001\u300c\u540c\u610f\u3059\u308b\u300d\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066 VisualVM \u3092\u8d77\u52d5\u3057\u3066\u304f\u3060\u3055\u3044\u3002VisualVM \u3092\u8d77\u52d5\u3059\u308b\u306b\u306f\u3001\u5951\u7d04\u306b\u540c\u610f\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
 MSG_LicenseYesButton=\u540c\u610f\u3059\u308b(&A)
