--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_ja.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# Copyright 2007-2010 Sun Microsystems, Inc.  All Rights Reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
 OpenIDE-Module-Name=VisualVM - \u30d7\u30ed\u30d5\u30a1\u30a4\u30e9
 
 LBL_Profiler=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9
@@ -64,7 +65,8 @@ MSG_Class_Sharing_Link=<a href="https://visualvm.dev.java.net/troubleshooting.ht
 
 MSG_Class_Sharing_Nolink=<nobr>https://visualvm.dev.java.net/troubleshooting.html#xshare</nobr>
 
-LBL_Profile=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb:
+LBL_Profile=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\:
+LBL_Sample=\u30b5\u30f3\u30d7\u30eb\:
 
 LBL_Cpu=CPU
 
@@ -78,31 +80,13 @@ MSG_Profiling_results=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u7d50\u679c
 
 LBL_Snapshot=\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8
 
-MSG_Compare_Snapshots=\u6bd4\u8f03(&C)
-
-DESCR_Compare_Snapshots=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3092\u6bd4\u8f03\u3057\u307e\u3059
-
-MSG_Not_Comparable=<html><b>\u9078\u629e\u3057\u305f\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u306f\u6bd4\u8f03\u3067\u304d\u307e\u305b\u3093\u3002</b><br><br>\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u306e\u7a2e\u985e\u3068\u8a2d\u5b9a\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
-
 MSG_Profile=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb(&P)
 
 DESCR_Profile=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb
 
-MSG_Save_Profiler_Snapshot_As=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3092\u5225\u540d\u4fdd\u5b58
-
 MSG_Profiler_Snapshot=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8(&F)
 
 DESCR_Profiler_Snapshot=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8
-
-LBL_Snapshots_Comparison=\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u6bd4\u8f03
-
-DESCR_Snapshots_Comparison=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u6bd4\u8f03\: {0} \u3068 {1} \u3092\u6bd4\u8f03
-
-MSG_Profiler_Snapshots=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8
-
-MSG_Opening_Profiler_Snapshot=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3092\u958b\u3044\u3066\u3044\u307e\u3059...
-
-MSG_Opening_snapshot_failed.=\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3092\u958b\u304f\u306e\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
 
 MSG_Calibration=<html><b>\u8abf\u6574\u304c\u884c\u308f\u308c\u307e\u3059\u3002</b><br><br>\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306b\u3088\u3063\u3066\u521d\u671f JDK \u8abf\u6574\u304c\u884c\u308f\u308c\u307e\u3059\u3002\u73fe\u6642\u70b9\u3067\u307b\u304b\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u304c\u30de\u30b7\u30f3\u306b<br>\u9855\u8457\u306a\u8ca0\u8377\u3092\u4e0e\u3048\u306a\u3044\u3053\u3068\u3092\u78ba\u8a8d\u3057\u3001\u300c\u4e86\u89e3\u300d\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
 
@@ -111,48 +95,4 @@ LBL_Settings=\u8a2d\u5b9a
 LBL_Cpu_settings=CPU \u8a2d\u5b9a
 
 LBL_Memory_settings=\u30e1\u30e2\u30ea\u30fc\u8a2d\u5b9a
-
-LBL_Profile_Allocations=\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u5272\u308a\u5f53\u3066\u3092\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb
-
-LBL_Profile_AllocationsGC=\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u5272\u308a\u5f53\u3066\u3068 GC \u3092\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb
-
-LBL_Record_Stacktraces=\u5272\u308a\u5f53\u3066\u30b9\u30bf\u30c3\u30af\u30c8\u30ec\u30fc\u30b9\u3092\u8a18\u9332
-
-LBL_Run_GC=\u7d50\u679c\u306e\u53d6\u5f97\u6642\u306b GC \u3092\u5b9f\u884c
-
-LBL_Restore_Defaults=\u30c7\u30d5\u30a9\u30eb\u30c8\u306b\u623b\u3059
-
-LBL_Root_Classes=\u30af\u30e9\u30b9\u304b\u3089\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3092\u958b\u59cb\:
-
-LBL_Profile_Runnables=\u65b0\u898f\u5b9f\u884c\u53ef\u80fd\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u3092\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb
-
-LBL_Profile_Incl=\u30af\u30e9\u30b9\u306e\u307f\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\:
-
-LBL_Profile_Excl=\u30af\u30e9\u30b9\u3092\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3057\u306a\u3044\:
-
-MSG_Incorrect_CPU_settings=\u6307\u5b9a\u3057\u305f CPU \u8a2d\u5b9a\u306f\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093\u3002
-
-TOOLTIP_Root_Classes=<html>\u3053\u308c\u3089\u306e\u30af\u30e9\u30b9\u306e\u30b3\u30fc\u30c9\u304c\u547c\u3073\u51fa\u3055\u308c\u305f\u3068\u304d\u306b\u3001\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u304c\u958b\u59cb\u3055\u308c\u307e\u3059:<br><br><code><b>org.mypackage.**</b></code> \u306f\u3001\u30d1\u30c3\u30b1\u30fc\u30b8\u5185\u304a\u3088\u3073\u3059\u3079\u3066\u306e\u30b5\u30d6\u30d1\u30c3\u30b1\u30fc\u30b8\u5185\u306e\u3059\u3079\u3066\u306e\u30af\u30e9\u30b9\u3092\u5b9a\u7fa9\u3057\u307e\u3059<br><code><b>org.mypackage.*&nbsp;</b></code> \u306f\u3001\u30d1\u30c3\u30b1\u30fc\u30b8\u5185\u306e\u3059\u3079\u3066\u306e\u30af\u30e9\u30b9\u3092\u5b9a\u7fa9\u3057\u307e\u3059<br><code><b>org.mypackage.MyClass</b></code> \u306f\u3001<code>MyClass</code> \u306e\u307f\u3092\u5b9a\u7fa9\u3057\u307e\u3059<br><br><b>\u7a7a\u306e\u30c6\u30ad\u30b9\u30c8</b>\u306f\u3001\u3059\u3079\u3066\u306e\u30af\u30e9\u30b9\u3092\u5b9a\u7fa9\u3057\u307e\u3059</html>
-
-TOOLTIP_New_Runnables=\u65b0\u3057\u3044\u30b9\u30ec\u30c3\u30c9\u307e\u305f\u306f\u5b9f\u884c\u53ef\u80fd\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u304b\u3089\u547c\u3073\u51fa\u3055\u308c\u305f\u30af\u30e9\u30b9\u304c\u81ea\u52d5\u7684\u306b\u8a08\u88c5\u3055\u308c\u307e\u3059
-
-TOOLTIP_Inclusive_Filter=\u3053\u308c\u3089\u306e\u30d1\u30c3\u30b1\u30fc\u30b8\u306e\u30b3\u30fc\u30c9\u306e\u307f\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3055\u308c\u307e\u3059 
-
-TOOLTIP_Exclusive_Filter=\u3053\u308c\u3089\u306e\u30d1\u30c3\u30b1\u30fc\u30b8\u3092\u9664\u304f\u3059\u3079\u3066\u306e\u30b3\u30fc\u30c9\u304c\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3055\u308c\u307e\u3059
-
-TOOLTIP_Instrumentation_Filter=<html><code><b>org.mypackage.&nbsp;</b></code> \u306f\u3001\u30d1\u30c3\u30b1\u30fc\u30b8\u306e\u30b3\u30fc\u30c9\u306e\u307f\u3092\u5b9a\u7fa9\u3057\u307e\u3059<br><code><b>org.mypackage.*</b></code> \u306f\u3001\u30d1\u30c3\u30b1\u30fc\u30b8\u3068\u3059\u3079\u3066\u306e\u30b5\u30d6\u30d1\u30c3\u30b1\u30fc\u30b8\u3092\u5b9a\u7fa9\u3057\u307e\u3059<br><br><b>\u7a7a\u306e\u30c6\u30ad\u30b9\u30c8</b>\u306f\u3001\u3059\u3079\u3066\u306e\u30d1\u30c3\u30b1\u30fc\u30b8\u3092\u5b9a\u7fa9\u3057\u307e\u3059<html>
-
-TOOLTIP_Allocations=\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u5272\u308a\u5f53\u3066\u306e\u307f\u8a18\u9332\u3057\u307e\u3059
-
-TOOLTIP_Allocations_GC=\u5272\u308a\u5f53\u3066\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306e\u30e9\u30a4\u30d5\u30b5\u30a4\u30af\u30eb\u5168\u4f53\u3092\u8a18\u9332\u3057\u307e\u3059
-
-LBL_Track_Every1=\u8ffd\u8de1\u5358\u4f4d
-
-LBL_Track_Every2=\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u5272\u308a\u5f53\u3066\u6bce
-
-TOOLTIP_Track_Every=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u306e\u30aa\u30fc\u30d0\u30fc\u30d8\u30c3\u30c9\u3092\u524a\u6e1b\u3059\u308b\u305f\u3081\u3001n \u756a\u76ee\u306e\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306e\u307f\u8ffd\u8de1\u3057\u307e\u3059\u3002\u5272\u308a\u5f53\u3066\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306e\u5408\u8a08\u6570\u306f\u5909\u308f\u308a\u307e\u305b\u3093\u3002
-
-TOOLTIP_Stack_Traces=\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u3092\u5272\u308a\u5f53\u3066\u308b\u30e1\u30bd\u30c3\u30c9\u306b\u3064\u3044\u3066\u306e\u60c5\u5831\u304c\u53ce\u96c6\u3055\u308c\u307e\u3059
-
-DESCR_ProfilerSnapshot=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3002
 
