--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/Bundle_zh_CN.properties
@@ -27,3 +27,8 @@ LBL_ConnectionProperties=\u8fde\u63a5
 DESCR_ConnectionProperties=\u7528\u4e8e\u53d1\u73b0\u5e76\u7ba1\u7406\u5e94\u7528\u7a0b\u5e8f\u7684\u8fde\u63a5
 MSG_ConnectionProperties=\u4e3b\u673a VisualVM \u5b9e\u4f8b\u7531\u76f4\u63a5 VM \u8fde\u63a5\u7ba1\u7406\u3002
 
+ACT_SortApps=\u5e94\u7528\u7a0b\u5e8f\u7684\u6392\u5e8f\u65b9\u5f0f(&A)
+ACT_TimeAdded=\u6dfb\u52a0\u7684\u65f6\u95f4(&T)
+ACT_DisplayName=\u663e\u793a\u540d\u79f0(&D)
+ACT_Pid=\u8fdb\u7a0b ID(&P)
+
