--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-coredump/com-sun-tools-visualvm-coredump/com/sun/tools/visualvm/coredump/Bundle_zh_CN.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u57fa\u7840\u7ed3\u6784
 OpenIDE-Module-Name=VisualVM-CoreDump
 
 LBL_Save_Core_Dump_As=\u5c06\u6838\u5fc3 Dump \u53e6\u5b58\u4e3a
@@ -29,4 +30,8 @@ LBL_Save_Core_Dump_As=\u5c06\u6838\u5fc3 Dump \u53e6\u5b58\u4e3a
 LBL_VM_Coredumps=VM \u6838\u5fc3 dump
 
 DESCR_CoreDump=\u6838\u5fc3 dump\u3002
+
+ACT_SortCoreDumps=\u6838\u5fc3 Dump \u7684\u6392\u5e8f\u65b9\u5f0f(&C)
+ACT_TimeAdded=\u6dfb\u52a0\u7684\u65f6\u95f4(&T)
+ACT_DisplayName=\u663e\u793a\u540d\u79f0(&D)
 
