--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-heapdump/com-sun-tools-visualvm-heapdump/com/sun/tools/visualvm/heapdump/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-heapdump/com-sun-tools-visualvm-heapdump/com/sun/tools/visualvm/heapdump/Bundle_zh_CN.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u57fa\u7840\u7ed3\u6784
 OpenIDE-Module-Name=VisualVM-HeapDump
 
 LBL_Save_Heap_Dump_As=\u5c06\u5806 Dump \u53e6\u5b58\u4e3a
