--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-heapdump/com-sun-tools-visualvm-heapdump/com/sun/tools/visualvm/heapdump/impl/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-heapdump/com-sun-tools-visualvm-heapdump/com/sun/tools/visualvm/heapdump/impl/Bundle_zh_CN.properties
@@ -43,3 +43,13 @@ LBL_Creating_Heap_Dump=\u6b63\u5728\u521b\u5efa\u5806 Dump...
 
 LBL_Loading_Heap_Dump=\u6b63\u5728\u88c5\u5165\u5806 Dump...
 
+CAPTION_Remote_heap_dump=\u8fdc\u7a0b\u5806 Dump
+
+MSG_Remote_heap_dump=\u5c06\u5728\u8fdc\u7a0b\u7cfb\u7edf\u4e0a\u521b\u5efa\u4ee5\u4e0b\u5806 Dump \u6587\u4ef6(&H)\uff1a
+
+MSG_Dump_failed=\u65e0\u6cd5\u4e3a\u6b64\u5e94\u7528\u7a0b\u5e8f\u751f\u6210\u8fdc\u7a0b\u5806 Dump\u3002
+
+MSG_Dump_save_failed=\u65e0\u6cd5\u521b\u5efa\u5e76\u4fdd\u5b58\u8fdc\u7a0b\u5806 Dump\uff1a\n{0}
+
+MSG_Dump_ok=\u5df2\u5728\u8fdc\u7a0b\u7cfb\u7edf\u4e0a\u521b\u5efa\u5e76\u4fdd\u5b58\u4e86\u5806 Dump\uff1a\n{0}\n\n\u53ef\u5c06\u8be5\u6587\u4ef6\u79fb\u52a8\u5230\u672c\u5730\u7cfb\u7edf\u5e76\u4f7f\u7528\u201c\u6587\u4ef6\u201d|\u201c\u88c5\u5165...\u201d\u64cd\u4f5c\u5c06\u5176\u6253\u5f00\u3002
+
