--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvm/com-sun-tools-visualvm-jvm/com/sun/tools/visualvm/jvm/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvm/com-sun-tools-visualvm-jvm/com/sun/tools/visualvm/jvm/Bundle_zh_CN.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u57fa\u7840\u7ed3\u6784
 OpenIDE-Module-Name=VisualVM-JVM
 
 MSG_ThreadDumpfailed=\u751f\u6210\u7ebf\u7a0b Dump \u5931\u8d25
