--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-threaddump/com-sun-tools-visualvm-threaddump/com/sun/tools/visualvm/threaddump/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-threaddump/com-sun-tools-visualvm-threaddump/com/sun/tools/visualvm/threaddump/Bundle_zh_CN.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=\u57fa\u7840\u7ed3\u6784
 OpenIDE-Module-Name=VisualVM-ThreadDump
 
 MSG_Save_Thread_Dump_As=\u5c06\u7ebf\u7a0b Dump \u53e6\u5b58\u4e3a
