VisualVM 136 localization for ja and zh_CN (contributed by masaki)
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3239 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-application-views/com-sun-tools-visualvm-application-views/com/sun/tools/visualvm/application/views/monitor/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-application-views/com-sun-tools-visualvm-application-views/com/sun/tools/visualvm/application/views/monitor/Bundle_ja.properties
@@ -54,9 +54,9 @@ LBL_Heap_size=\u30b5\u30a4\u30ba
 
 LBL_Used_heap=\u4f7f\u7528
 
-LBL_Heap_size_leg=\u30d2\u30fc\u30d7\u30b5\u30a4\u30ba
+LBL_Heap_size_leg={0} \u30b5\u30a4\u30ba
 
-LBL_Used_heap_leg=\u4f7f\u7528\u6e08\u307f\u30d2\u30fc\u30d7
+LBL_Used_heap_leg=\u4f7f\u7528\u6e08\u307f {0}
 
 LBL_Max_Heap=\u6700\u5927
 
@@ -64,9 +64,9 @@ LBL_PermGen_size=\u30b5\u30a4\u30ba
 
 LBL_Used_PermGen=\u4f7f\u7528
 
-LBL_PermGen_size_leg=PermGen \u30b5\u30a4\u30ba
+LBL_PermGen_size_leg={0} \u30b5\u30a4\u30ba
 
-LBL_Used_PermGen_leg=\u4f7f\u7528\u6e08\u307f PermGen
+LBL_Used_PermGen_leg=\u4f7f\u7528\u6e08\u307f {0}
 
 LBL_Max_PermGen_size=\u6700\u5927
 
@@ -97,3 +97,4 @@ LBL_Daemon_threads_leg=\u30c7\u30fc\u30e2\u30f3\u30b9\u30ec\u30c3\u30c9
 FORMAT_hms={0} \u6642\u9593 {1} \u5206 {2} \u79d2
 FORMAT_ms={0} \u5206 {1} \u79d2
 
+TXT_Perform_GC_failed=GC\u30a2\u30af\u30b7\u30e7\u30f3\u306e\u5b9f\u884c\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002\n{0}
