--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-sampler/com-sun-tools-visualvm-sampler/com/sun/tools/visualvm/sampler/cpu/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-sampler/com-sun-tools-visualvm-sampler/com/sun/tools/visualvm/sampler/cpu/Bundle_ja.properties
@@ -72,7 +72,7 @@ LBL_Ends_with=\u7d42\u4e86\u6587\u5b57\u5217
 
 LBL_Regexp=\u6b63\u898f\u8868\u73fe
 
-LBL_Thread_filter=[\u30b9\u30ec\u30c3\u30c9\u540d\u30d5\u30a3\u30eb\u30bf]
+LBL_Thread_filter=\u30b9\u30ec\u30c3\u30c9\u540d\u30d5\u30a3\u30eb\u30bf
 
 LBL_CPUTime=<b>\u5408\u8a08 CPU \u6642\u9593 [\u30df\u30ea\u79d2]: </b>{0}
 
