--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application-views/com-sun-tools-visualvm-application-views/com/sun/tools/visualvm/application/views/monitor/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application-views/com-sun-tools-visualvm-application-views/com/sun/tools/visualvm/application/views/monitor/Bundle_zh_CN.properties
@@ -47,6 +47,8 @@ LBL_Perform_GC=\u6267\u884c\u5783\u573e\u56de\u6536
 
 LBL_Heap_Dump=\u5806 Dump
 
+TXT_Perform_GC_failed=GC \u52a8\u4f5c\u6267\u884c\u5931\u8d25\u3002\n{0}
+
 # HTML-formatted: Uptime: 11:20 AM
 LBL_Uptime=<nobr><b>\u6b63\u5e38\u8fd0\u884c\u65f6\u95f4\uff1a</b>{0}</nobr>
 
@@ -54,9 +56,9 @@ LBL_Heap_size=\u5927\u5c0f
 
 LBL_Used_heap=\u5df2\u4f7f\u7528
 
-LBL_Heap_size_leg=\u5806\u5927\u5c0f
+LBL_Heap_size_leg={0} \u5927\u5c0f
 
-LBL_Used_heap_leg=\u4f7f\u7528\u7684\u5806
+LBL_Used_heap_leg=\u4f7f\u7528\u7684 {0}
 
 LBL_Max_Heap=\u6700\u5927
 
@@ -64,9 +66,9 @@ LBL_PermGen_size=\u5927\u5c0f
 
 LBL_Used_PermGen=\u5df2\u4f7f\u7528
 
-LBL_PermGen_size_leg=PermGen \u5927\u5c0f
+LBL_PermGen_size_leg={0} \u5927\u5c0f
 
-LBL_Used_PermGen_leg=\u4f7f\u7528\u7684 PermGen
+LBL_Used_PermGen_leg=\u4f7f\u7528\u7684 {0}
 
 LBL_Max_PermGen_size=\u6700\u5927
 
@@ -96,4 +98,3 @@ LBL_Daemon_threads_leg=\u5b88\u62a4\u7ebf\u7a0b
 
 FORMAT_hms={0} \u5c0f\u65f6 {1} \u5206 {2} \u79d2
 FORMAT_ms={0} \u5206 {1} \u79d2
-
