--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvm/com-sun-tools-visualvm-jvm/com/sun/tools/visualvm/jvm/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jvm/com-sun-tools-visualvm-jvm/com/sun/tools/visualvm/jvm/Bundle_zh_CN.properties
@@ -27,3 +27,6 @@ OpenIDE-Module-Name=VisualVM-JVM
 
 MSG_ThreadDumpfailed=\u751f\u6210\u7ebf\u7a0b Dump \u5931\u8d25
 
+LBL_Heap=\u5806
+LBL_NA=N/A
+LBL_Perm=Perm
