--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_zh_CN.properties
@@ -88,7 +88,13 @@ MSG_Profiler_Snapshot=Pro&filer \u5feb\u7167
 
 DESCR_Profiler_Snapshot=Profiler \u5feb\u7167
 
-MSG_Calibration=<html><b>\u5c06\u6267\u884c\u6821\u51c6\u3002</b><br><br>Profiler \u5c06\u6267\u884c\u521d\u59cb JDK \u6821\u51c6\u3002\u8bf7\u786e\u4fdd\u6b64\u65f6\u60a8\u7684\u8ba1\u7b97\u673a\u4e0a\u6ca1\u6709\u5176\u4ed6\u5e94\u7528\u7a0b\u5e8f<br>\u9020\u6210\u663e\u8457\u8d1f\u8f7d\uff0c\u7136\u540e\u5355\u51fb\u201c\u786e\u5b9a\u201d\u6309\u94ae\u3002</html>
+CAPTION_Calibration=VisualVM \u6821\u51c6
+
+MSG_Calibration=<html><b>\u5c06\u6267\u884c\u6821\u51c6\u3002</b><br><br>Profiler \u5c06\u6267\u884c\u521d\u59cb JDK \u6821\u51c6\u3002\u8bf7\u786e\u4fdd\u6b64\u65f6\u60a8\u7684\u8ba1\u7b97\u673a\u4e0a\u6ca1\u6709\u5176\u4ed6\u5e94\u7528\u7a0b\u5e8f<br>\u9020\u6210\u663e\u8457\u8d1f\u8f7d\uff0c\u7136\u540e\u5355\u51fb\u201c\u786e\u5b9a\u201d\u6309\u94ae\u3002<br><br></html>
+
+CAPTION_DeletedRestart=\u6821\u51c6\u6570\u636e\u91cd\u7f6e
+
+MSG_DeletedRestart=<html><b>\u91cd\u65b0\u542f\u52a8 VisualVM\uff1f</b><br><br>\u6821\u51c6\u6570\u636e\u6210\u529f\u91cd\u7f6e\u3002\u662f\u5426\u8981\u73b0\u5728\u91cd\u65b0\u542f \u52a8<br>VisualVM \u4ee5\u6267\u884c\u65b0\u7684\u6821\u51c6?</html> 
 
 LBL_Settings=\u8bbe\u7f6e
 
