--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-sampler/com-sun-tools-visualvm-sampler/com/sun/tools/visualvm/sampler/cpu/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-sampler/com-sun-tools-visualvm-sampler/com/sun/tools/visualvm/sampler/cpu/Bundle_zh_CN.properties
@@ -72,7 +72,7 @@ LBL_Ends_with=\u7ed3\u5c3e\u4e3a
 
 LBL_Regexp=\u6b63\u5219\u8868\u8fbe\u5f0f
 
-LBL_Thread_filter=[\u7ebf\u7a0b\u540d\u79f0\u8fc7\u6ee4\u5668]
+LBL_Thread_filter=\u7ebf\u7a0b\u540d\u79f0\u8fc7\u6ee4\u5668
 
 LBL_CPUTime=<b>\u603b\u7684 CPU \u65f6\u95f4 [\u6beb\u79d2]\uff1a</b>{0}
 
