--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-sampler/com-sun-tools-visualvm-sampler/com/sun/tools/visualvm/sampler/memory/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-sampler/com-sun-tools-visualvm-sampler/com/sun/tools/visualvm/sampler/memory/Bundle_zh_CN.properties
@@ -74,9 +74,9 @@ LBL_Ends_with=\u7ed3\u5c3e\u4e3a
 
 LBL_Regexp=\u6b63\u5219\u8868\u8fbe\u5f0f
 
-LBL_Class_filter=[\u7c7b\u540d\u8fc7\u6ee4\u5668]
+LBL_Class_filter=\u7c7b\u540d\u8fc7\u6ee4\u5668
 
-LBL_Thread_filter=[\u7ebf\u7a0b\u540d\u79f0\u8fc7\u6ee4\u5668]
+LBL_Thread_filter=\u7ebf\u7a0b\u540d\u79f0\u8fc7\u6ee4\u5668
 
 LBL_Classes=<b>\u7c7b\uff1a</b>{0}
 
