--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_ja.properties
@@ -88,7 +88,12 @@ MSG_Profiler_Snapshot=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30
 
 DESCR_Profiler_Snapshot=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8
 
-MSG_Calibration=<html><b>\u8abf\u6574\u304c\u884c\u308f\u308c\u307e\u3059\u3002</b><br><br>\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306b\u3088\u3063\u3066\u521d\u671f JDK \u8abf\u6574\u304c\u884c\u308f\u308c\u307e\u3059\u3002\u73fe\u6642\u70b9\u3067\u307b\u304b\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u304c\u30de\u30b7\u30f3\u306b<br>\u9855\u8457\u306a\u8ca0\u8377\u3092\u4e0e\u3048\u306a\u3044\u3053\u3068\u3092\u78ba\u8a8d\u3057\u3001\u300c\u4e86\u89e3\u300d\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
+CAPTION_Calibration=VisualVM \u8abf\u6574
+
+MSG_Calibration=<html><b>\u8abf\u6574\u304c\u884c\u308f\u308c\u307e\u3059\u3002</b><br><br>\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306b\u3088\u3063\u3066\u521d\u671f JDK \u8abf\u6574\u304c\u884c\u308f\u308c\u307e\u3059\u3002\u73fe\u6642\u70b9\u3067\u307b\u304b\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u304c\u30de\u30b7\u30f3\u306b<br>\u9855\u8457\u306a\u8ca0\u8377\u3092\u4e0e\u3048\u306a\u3044\u3053\u3068\u3092\u78ba\u8a8d\u3057\u3001\u300c\u4e86\u89e3\u300d\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002<br><br></html>
+
+CAPTION_DeletedRestart=\u8abf\u6574\u30c7\u30fc\u30bf\u306e\u30ea\u30bb\u30c3\u30c8
+MSG_DeletedRestart=<html><b>VisualVM\u3092\u518d\u8d77\u52d5\u3057\u307e\u3059\u304b?</b><br><br>\u8abf\u6574\u30c7\u30fc\u30bf\u306f\u30ea\u30bb\u30c3\u30c8\u3055\u308c\u307e\u3057\u305f\u3002<br>VisualVM \u3092\u518d\u8d77\u52d5\u3057\u518d\u8abf\u6574\u3092\u884c\u3044\u307e\u3059\u304b?</html>
 
 LBL_Settings=\u8a2d\u5b9a
 
