--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/impl/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/impl/Bundle_zh_CN.properties
@@ -57,3 +57,10 @@ LBL_ConnectionProperties=\u8fde\u63a5
 DESCR_ConnectionProperties=\u7528\u4e8e\u53d1\u73b0\u5e76\u7ba1\u7406\u5e94\u7528\u7a0b\u5e8f\u7684\u8fde\u63a5
 MSG_ConnectionProperties=\u8be5\u5e94\u7528\u7a0b\u5e8f\u7531 JMX \u8fde\u63a5\u7ba1\u7406\u3002\u6709\u5173\u8be6\u7ec6\u4fe1\u606f\uff0c\u8bf7\u53c2\u89c1\u201cJMX \u8fde\u63a5\u201d\u6807\u7b7e\u3002
 
+
+Title_Unresolved_JMX=\u65e0\u6cd5\u89e3\u6790 JMX \u8fde\u63a5
+MSG_Unresolved_JMX=<html><b>\u6b64 JMX \u8fde\u63a5\u65e0\u6cd5\u89e3\u6790\uff1a</b><br>\u662f\u5426\u8981\u5728\u4e0b\u4e00 \u4e2a VisualVM \u4f1a\u8bdd\u65f6\u89e3\u6790\u8fd9\u4e9b\u8fde\u63a5\uff1f<br><br></html>
+
+Title_Insecure_SSL=\u5b89\u5168\u8fde\u63a5\u5931\u8d25\u3002\u8bf7\u786e\u8ba4\u662f\u5426\u4ee5\u975e\u5b89\u5168\u7684\u65b9\u5f0f\u91cd\u8bd5\uff1f
+MSG_Insecure_SSL=<html><b><br>\u65e0\u6cd5\u4ee5 SSL \u65b9\u5f0f<br>\u8fde\u63a5\u81f3 {0}\u3002</b><br>\u8bf7\u786e\u8ba4\u4e0d\u7528 SSL \u65b9\u5f0f\u5c1d\u8bd5\u8fde\u63a5\uff1f<br>\uff08\u7528\u6237\u540d\u548c\u5bc6\u7801\u5c06\u4ee5\u7eaf\u6587\u672c\u53d1\u9001\uff09<html>
+
