--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-tools/com-sun-tools-visualvm-tools/com/sun/tools/visualvm/tools/jvmstat/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-tools/com-sun-tools-visualvm-tools/com/sun/tools/visualvm/tools/jvmstat/Bundle_zh_CN.properties
@@ -22,11 +22,5 @@
 # or visit www.oracle.com if you need additional information or have any
 # questions.
 
-OpenIDE-Module-Display-Category=\u30a4\u30f3\u30d5\u30e9\u30b9\u30c8\u30e9\u30af\u30c1\u30e3\u30fc
-OpenIDE-Module-Name=VisualVM - JVM
-
-MSG_ThreadDumpfailed=\u30b9\u30ec\u30c3\u30c9\u30c0\u30f3\u30d7\u306e\u53d6\u5f97\u306b\u5931\u6557\u3057\u307e\u3057\u305f
-
-LBL_Heap=\u30d2\u30fc\u30d7
-LBL_NA=N/A
+LBL_Heap=\u5806
 LBL_Perm=Perm
