rename Perm to PermGen and 'Used Heap' to 'Used heap' (to be consistent with VisualVM 1.3.5)
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3246 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-jvm/com-sun-tools-visualvm-jvm/com/sun/tools/visualvm/jvm/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-jvm/com-sun-tools-visualvm-jvm/com/sun/tools/visualvm/jvm/Bundle_ja.properties
@@ -29,4 +29,4 @@ MSG_ThreadDumpfailed=\u30b9\u30ec\u30c3\u30c9\u30c0\u30f3\u30d7\u306e\u53d6\u5f9
 
 LBL_Heap=\u30d2\u30fc\u30d7
 LBL_NA=N/A
-LBL_Perm=Perm
+LBL_PermGen=PermGen
